@@ -9,6 +9,7 @@
 package org.elasticsearch.action.search;
 
 import org.elasticsearch.action.ActionListener;
+import org.elasticsearch.action.IndicesRequest;
 import org.elasticsearch.action.OriginalIndices;
 import org.elasticsearch.action.admin.cluster.shards.ClusterSearchShardsGroup;
 import org.elasticsearch.action.admin.cluster.shards.ClusterSearchShardsRequest;
@@ -16,10 +17,12 @@ import org.elasticsearch.action.admin.cluster.shards.ClusterSearchShardsResponse
 import org.elasticsearch.action.support.ActionFilters;
 import org.elasticsearch.action.support.HandledTransportAction;
 import org.elasticsearch.action.support.IndicesOptions;
-import org.elasticsearch.client.Client;
+import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.block.ClusterBlockException;
 import org.elasticsearch.cluster.block.ClusterBlockLevel;
+import org.elasticsearch.cluster.metadata.IndexAbstraction;
+import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
 import org.elasticsearch.cluster.node.DiscoveryNode;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
@@ -28,33 +31,38 @@ import org.elasticsearch.cluster.routing.OperationRouting;
 import org.elasticsearch.cluster.routing.ShardIterator;
 import org.elasticsearch.cluster.routing.ShardRouting;
 import org.elasticsearch.cluster.service.ClusterService;
-import org.elasticsearch.core.Nullable;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.breaker.CircuitBreaker;
 import org.elasticsearch.common.inject.Inject;
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.io.stream.Writeable;
+import org.elasticsearch.common.logging.DeprecationCategory;
+import org.elasticsearch.common.logging.DeprecationLogger;
 import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Setting.Property;
-import org.elasticsearch.core.TimeValue;
+import org.elasticsearch.common.util.Maps;
 import org.elasticsearch.common.util.concurrent.AtomicArray;
 import org.elasticsearch.common.util.concurrent.CountDown;
+import org.elasticsearch.core.Nullable;
+import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.index.Index;
+import org.elasticsearch.index.IndexNotFoundException;
 import org.elasticsearch.index.query.Rewriteable;
 import org.elasticsearch.index.shard.ShardId;
+import org.elasticsearch.index.shard.ShardNotFoundException;
 import org.elasticsearch.indices.ExecutorSelector;
 import org.elasticsearch.indices.breaker.CircuitBreakerService;
 import org.elasticsearch.search.SearchPhaseResult;
 import org.elasticsearch.search.SearchService;
 import org.elasticsearch.search.SearchShardTarget;
-import org.elasticsearch.search.aggregations.InternalAggregation;
+import org.elasticsearch.search.aggregations.AggregationReduceContext;
 import org.elasticsearch.search.aggregations.InternalAggregations;
 import org.elasticsearch.search.builder.SearchSourceBuilder;
 import org.elasticsearch.search.internal.AliasFilter;
 import org.elasticsearch.search.internal.InternalSearchResponse;
 import org.elasticsearch.search.internal.SearchContext;
-import org.elasticsearch.search.profile.ProfileShardResult;
-import org.elasticsearch.search.profile.SearchProfileShardResults;
+import org.elasticsearch.search.profile.SearchProfileResults;
+import org.elasticsearch.search.profile.SearchProfileShardResult;
 import org.elasticsearch.tasks.Task;
 import org.elasticsearch.tasks.TaskId;
 import org.elasticsearch.threadpool.ThreadPool;
@@ -79,6 +87,7 @@ import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.BiConsumer;
 import java.util.function.BiFunction;
+import java.util.function.BooleanSupplier;
 import java.util.function.Function;
 import java.util.function.LongSupplier;
 import java.util.stream.Collectors;
@@ -86,15 +95,32 @@ import java.util.stream.StreamSupport;
 
 import static org.elasticsearch.action.search.SearchType.DFS_QUERY_THEN_FETCH;
 import static org.elasticsearch.action.search.SearchType.QUERY_THEN_FETCH;
+import static org.elasticsearch.action.search.TransportSearchHelper.checkCCSVersionCompatibility;
 import static org.elasticsearch.search.sort.FieldSortBuilder.hasPrimaryFieldSort;
 import static org.elasticsearch.threadpool.ThreadPool.Names.SYSTEM_CRITICAL_READ;
 import static org.elasticsearch.threadpool.ThreadPool.Names.SYSTEM_READ;
 
 public class TransportSearchAction extends HandledTransportAction<SearchRequest, SearchResponse> {
 
+    private static final DeprecationLogger DEPRECATION_LOGGER = DeprecationLogger.getLogger(TransportSearchAction.class);
+    public static final String FROZEN_INDICES_DEPRECATION_MESSAGE = "Searching frozen indices [{}] is deprecated."
+        + " Consider cold or frozen tiers in place of frozen indices. The frozen feature will be removed in a feature release.";
+
     /** The maximum number of shards for a single search request. */
     public static final Setting<Long> SHARD_COUNT_LIMIT_SETTING = Setting.longSetting(
-            "action.search.shard_count.limit", Long.MAX_VALUE, 1L, Property.Dynamic, Property.NodeScope);
+        "action.search.shard_count.limit",
+        Long.MAX_VALUE,
+        1L,
+        Property.Dynamic,
+        Property.NodeScope
+    );
+
+    public static final Setting<Integer> DEFAULT_PRE_FILTER_SHARD_SIZE = Setting.intSetting(
+        "action.search.pre_filter_shard_size.default",
+        SearchRequest.DEFAULT_PRE_FILTER_SHARD_SIZE,
+        1,
+        Property.NodeScope
+    );
 
     private final ThreadPool threadPool;
     private final ClusterService clusterService;
@@ -106,19 +132,23 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
     private final NamedWriteableRegistry namedWriteableRegistry;
     private final CircuitBreaker circuitBreaker;
     private final ExecutorSelector executorSelector;
+    private final int defaultPreFilterShardSize;
+    private final boolean ccsCheckCompatibility;
 
     @Inject
-    public TransportSearchAction(ThreadPool threadPool,
-                                 CircuitBreakerService circuitBreakerService,
-                                 TransportService transportService,
-                                 SearchService searchService,
-                                 SearchTransportService searchTransportService,
-                                 SearchPhaseController searchPhaseController,
-                                 ClusterService clusterService,
-                                 ActionFilters actionFilters,
-                                 IndexNameExpressionResolver indexNameExpressionResolver,
-                                 NamedWriteableRegistry namedWriteableRegistry,
-                                 ExecutorSelector executorSelector) {
+    public TransportSearchAction(
+        ThreadPool threadPool,
+        CircuitBreakerService circuitBreakerService,
+        TransportService transportService,
+        SearchService searchService,
+        SearchTransportService searchTransportService,
+        SearchPhaseController searchPhaseController,
+        ClusterService clusterService,
+        ActionFilters actionFilters,
+        IndexNameExpressionResolver indexNameExpressionResolver,
+        NamedWriteableRegistry namedWriteableRegistry,
+        ExecutorSelector executorSelector
+    ) {
         super(SearchAction.NAME, transportService, actionFilters, (Writeable.Reader<SearchRequest>) SearchRequest::new);
         this.threadPool = threadPool;
         this.circuitBreaker = circuitBreakerService.getBreaker(CircuitBreaker.REQUEST);
@@ -131,12 +161,54 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
         this.indexNameExpressionResolver = indexNameExpressionResolver;
         this.namedWriteableRegistry = namedWriteableRegistry;
         this.executorSelector = executorSelector;
+        this.defaultPreFilterShardSize = DEFAULT_PRE_FILTER_SHARD_SIZE.get(clusterService.getSettings());
+        this.ccsCheckCompatibility = SearchService.CCS_VERSION_CHECK_SETTING.get(clusterService.getSettings());
     }
 
-    private Map<String, AliasFilter> buildPerIndexAliasFilter(SearchRequest request, ClusterState clusterState,
-                                                              Index[] concreteIndices, Map<String, AliasFilter> remoteAliasMap) {
+    private Map<String, OriginalIndices> buildPerIndexOriginalIndices(
+        ClusterState clusterState,
+        Set<String> indicesAndAliases,
+        Index[] concreteIndices,
+        IndicesOptions indicesOptions
+    ) {
+        Map<String, OriginalIndices> res = new HashMap<>();
+        for (Index index : concreteIndices) {
+            clusterState.blocks().indexBlockedRaiseException(ClusterBlockLevel.READ, index.getName());
+
+            String[] aliases = indexNameExpressionResolver.indexAliases(
+                clusterState,
+                index.getName(),
+                aliasMetadata -> true,
+                dataStreamAlias -> true,
+                true,
+                indicesAndAliases
+            );
+            BooleanSupplier hasDataStreamRef = () -> {
+                IndexAbstraction ret = clusterState.getMetadata().getIndicesLookup().get(index.getName());
+                if (ret == null || ret.getParentDataStream() == null) {
+                    return false;
+                }
+                return indicesAndAliases.contains(ret.getParentDataStream().getName());
+            };
+            List<String> finalIndices = new ArrayList<>();
+            if (aliases == null || aliases.length == 0 || indicesAndAliases.contains(index.getName()) || hasDataStreamRef.getAsBoolean()) {
+                finalIndices.add(index.getName());
+            }
+            if (aliases != null) {
+                finalIndices.addAll(Arrays.asList(aliases));
+            }
+            res.put(index.getUUID(), new OriginalIndices(finalIndices.toArray(String[]::new), indicesOptions));
+        }
+        return Collections.unmodifiableMap(res);
+    }
+
+    private Map<String, AliasFilter> buildPerIndexAliasFilter(
+        ClusterState clusterState,
+        Set<String> indicesAndAliases,
+        Index[] concreteIndices,
+        Map<String, AliasFilter> remoteAliasMap
+    ) {
         final Map<String, AliasFilter> aliasFilterMap = new HashMap<>();
-        final Set<String> indicesAndAliases = indexNameExpressionResolver.resolveExpressions(clusterState, request.indices());
         for (Index index : concreteIndices) {
             clusterState.blocks().indexBlockedRaiseException(ClusterBlockLevel.READ, index.getName());
             AliasFilter aliasFilter = searchService.buildAliasFilter(clusterState, index.getName(), indicesAndAliases);
@@ -159,8 +231,11 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
 
         Map<String, Float> concreteIndexBoosts = new HashMap<>();
         for (SearchSourceBuilder.IndexBoost ib : source.indexBoosts()) {
-            Index[] concreteIndices =
-                indexNameExpressionResolver.concreteIndices(clusterState, searchRequest.indicesOptions(), ib.getIndex());
+            Index[] concreteIndices = indexNameExpressionResolver.concreteIndices(
+                clusterState,
+                searchRequest.indicesOptions(),
+                ib.getIndex()
+            );
 
             for (Index concreteIndex : concreteIndices) {
                 concreteIndexBoosts.putIfAbsent(concreteIndex.getUUID(), ib.getBoost());
@@ -177,11 +252,7 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
      * to moving backwards due to NTP and other such complexities, etc.). There are also issues with
      * using a relative clock for reporting real time. Thus, we simply separate these two uses.
      */
-    static final class SearchTimeProvider {
-
-        private final long absoluteStartMillis;
-        private final long relativeStartNanos;
-        private final LongSupplier relativeCurrentNanosProvider;
+    record SearchTimeProvider(long absoluteStartMillis, long relativeStartNanos, LongSupplier relativeCurrentNanosProvider) {
 
         /**
          * Instantiates a new search time provider. The absolute start time is the real clock time
@@ -190,22 +261,11 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
          * operation took can be measured against the provided relative clock and the relative start
          * time.
          *
-         * @param absoluteStartMillis the absolute start time in milliseconds since the epoch
-         * @param relativeStartNanos the relative start time in nanoseconds
+         * @param absoluteStartMillis          the absolute start time in milliseconds since the epoch
+         * @param relativeStartNanos           the relative start time in nanoseconds
          * @param relativeCurrentNanosProvider provides the current relative time
          */
-        SearchTimeProvider(
-                final long absoluteStartMillis,
-                final long relativeStartNanos,
-                final LongSupplier relativeCurrentNanosProvider) {
-            this.absoluteStartMillis = absoluteStartMillis;
-            this.relativeStartNanos = relativeStartNanos;
-            this.relativeCurrentNanosProvider = relativeCurrentNanosProvider;
-        }
-
-        long getAbsoluteStartMillis() {
-            return absoluteStartMillis;
-        }
+        SearchTimeProvider {}
 
         long buildTookInMillis() {
             return TimeUnit.NANOSECONDS.toMillis(relativeCurrentNanosProvider.getAsLong() - relativeStartNanos);
@@ -214,34 +274,69 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
 
     @Override
     protected void doExecute(Task task, SearchRequest searchRequest, ActionListener<SearchResponse> listener) {
-        executeRequest(task, searchRequest, this::searchAsyncAction, listener);
+        executeRequest((SearchTask) task, searchRequest, this::searchAsyncAction, listener);
     }
 
     public interface SinglePhaseSearchAction {
-        void executeOnShardTarget(SearchTask searchTask, SearchShardTarget target, Transport.Connection connection,
-                                  ActionListener<SearchPhaseResult> listener);
+        void executeOnShardTarget(
+            SearchTask searchTask,
+            SearchShardIterator shardIt,
+            Transport.Connection connection,
+            ActionListener<SearchPhaseResult> listener
+        );
     }
 
-    public void executeRequest(Task task, SearchRequest searchRequest, String actionName,
-                               boolean includeSearchContext, SinglePhaseSearchAction phaseSearchAction,
-                               ActionListener<SearchResponse> listener) {
+    public void executeRequest(
+        SearchTask task,
+        SearchRequest searchRequest,
+        String actionName,
+        boolean includeSearchContext,
+        SinglePhaseSearchAction phaseSearchAction,
+        ActionListener<SearchResponse> listener
+    ) {
         executeRequest(task, searchRequest, new SearchAsyncActionProvider() {
             @Override
             public AbstractSearchAsyncAction<? extends SearchPhaseResult> asyncSearchAction(
-                SearchTask task, SearchRequest searchRequest, Executor executor, GroupShardsIterator<SearchShardIterator> shardsIts,
-                SearchTimeProvider timeProvider, BiFunction<String, String, Transport.Connection> connectionLookup,
-                ClusterState clusterState, Map<String, AliasFilter> aliasFilter,
-                Map<String, Float> concreteIndexBoosts, ActionListener<SearchResponse> listener,
-                boolean preFilter, ThreadPool threadPool, SearchResponse.Clusters clusters) {
+                SearchTask task,
+                SearchRequest searchRequest,
+                Executor executor,
+                GroupShardsIterator<SearchShardIterator> shardsIts,
+                SearchTimeProvider timeProvider,
+                BiFunction<String, String, Transport.Connection> connectionLookup,
+                ClusterState clusterState,
+                Map<String, AliasFilter> aliasFilter,
+                Map<String, Float> concreteIndexBoosts,
+                ActionListener<SearchResponse> listener,
+                boolean preFilter,
+                ThreadPool threadPool,
+                SearchResponse.Clusters clusters
+            ) {
                 return new AbstractSearchAsyncAction<>(
-                    actionName, logger, searchTransportService, connectionLookup, aliasFilter, concreteIndexBoosts,
-                    executor, searchRequest, listener, shardsIts, timeProvider, clusterState, task,
-                    new ArraySearchPhaseResults<>(shardsIts.size()), 1, clusters) {
+                    actionName,
+                    logger,
+                    searchTransportService,
+                    connectionLookup,
+                    aliasFilter,
+                    concreteIndexBoosts,
+                    executor,
+                    searchRequest,
+                    listener,
+                    shardsIts,
+                    timeProvider,
+                    clusterState,
+                    task,
+                    new ArraySearchPhaseResults<>(shardsIts.size()),
+                    1,
+                    clusters
+                ) {
                     @Override
-                    protected void executePhaseOnShard(SearchShardIterator shardIt, SearchShardTarget shard,
-                                                       SearchActionListener<SearchPhaseResult> listener) {
+                    protected void executePhaseOnShard(
+                        SearchShardIterator shardIt,
+                        SearchShardTarget shard,
+                        SearchActionListener<SearchPhaseResult> listener
+                    ) {
                         final Transport.Connection connection = getConnection(shard.getClusterAlias(), shard.getNodeId());
-                        phaseSearchAction.executeOnShardTarget(task, shard, connection, listener);
+                        phaseSearchAction.executeOnShardTarget(task, shardIt, connection, listener);
                     }
 
                     @Override
@@ -250,7 +345,7 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
                             @Override
                             public void run() {
                                 final AtomicArray<SearchPhaseResult> atomicArray = results.getAtomicArray();
-                                sendSearchResponse(InternalSearchResponse.empty(), atomicArray);
+                                sendSearchResponse(InternalSearchResponse.EMPTY_WITH_TOTAL_HITS, atomicArray);
                             }
                         };
                     }
@@ -264,16 +359,24 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
         }, listener);
     }
 
-    private void executeRequest(Task task,
-                                SearchRequest original,
-                                SearchAsyncActionProvider searchAsyncActionProvider,
-                                ActionListener<SearchResponse> listener) {
+    private void executeRequest(
+        SearchTask task,
+        SearchRequest original,
+        SearchAsyncActionProvider searchAsyncActionProvider,
+        ActionListener<SearchResponse> listener
+    ) {
         final long relativeStartNanos = System.nanoTime();
-        final SearchTimeProvider timeProvider =
-            new SearchTimeProvider(original.getOrCreateAbsoluteStartMillis(), relativeStartNanos, System::nanoTime);
+        final SearchTimeProvider timeProvider = new SearchTimeProvider(
+            original.getOrCreateAbsoluteStartMillis(),
+            relativeStartNanos,
+            System::nanoTime
+        );
         ActionListener<SearchRequest> rewriteListener = ActionListener.wrap(rewritten -> {
             final SearchContextId searchContext;
             final Map<String, OriginalIndices> remoteClusterIndices;
+            if (ccsCheckCompatibility) {
+                checkCCSVersionCompatibility(rewritten);
+            }
             if (rewritten.pointInTimeBuilder() != null) {
                 searchContext = rewritten.pointInTimeBuilder().getSearchContextId(namedWriteableRegistry);
                 remoteClusterIndices = getIndicesFromSearchContexts(searchContext, rewritten.indicesOptions());
@@ -285,48 +388,113 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
             final ClusterState clusterState = clusterService.state();
             if (remoteClusterIndices.isEmpty()) {
                 executeLocalSearch(
-                    task, timeProvider, rewritten, localIndices, clusterState, listener, searchContext, searchAsyncActionProvider);
+                    task,
+                    timeProvider,
+                    rewritten,
+                    localIndices,
+                    clusterState,
+                    listener,
+                    searchContext,
+                    searchAsyncActionProvider
+                );
             } else {
                 if (shouldMinimizeRoundtrips(rewritten)) {
-                    final TaskId parentTaskId = task.taskInfo(clusterService.localNode().getId(), false).getTaskId();
-                    ccsRemoteReduce(parentTaskId, rewritten, localIndices, remoteClusterIndices, timeProvider,
-                        searchService.aggReduceContextBuilder(rewritten),
-                        remoteClusterService, threadPool, listener,
+                    final TaskId parentTaskId = task.taskInfo(clusterService.localNode().getId(), false).taskId();
+                    ccsRemoteReduce(
+                        parentTaskId,
+                        rewritten,
+                        localIndices,
+                        remoteClusterIndices,
+                        timeProvider,
+                        searchService.aggReduceContextBuilder(task::isCancelled, rewritten),
+                        remoteClusterService,
+                        threadPool,
+                        listener,
                         (r, l) -> executeLocalSearch(
-                            task, timeProvider, r, localIndices, clusterState, l, searchContext, searchAsyncActionProvider));
+                            task,
+                            timeProvider,
+                            r,
+                            localIndices,
+                            clusterState,
+                            l,
+                            searchContext,
+                            searchAsyncActionProvider
+                        )
+                    );
                 } else {
                     AtomicInteger skippedClusters = new AtomicInteger(0);
-                    collectSearchShards(rewritten.indicesOptions(), rewritten.preference(), rewritten.routing(),
-                        skippedClusters, remoteClusterIndices, remoteClusterService, threadPool,
-                        ActionListener.wrap(
-                            searchShardsResponses -> {
-                                final BiFunction<String, String, DiscoveryNode> clusterNodeLookup =
-                                    getRemoteClusterNodeLookup(searchShardsResponses);
-                                final Map<String, AliasFilter> remoteAliasFilters;
-                                final List<SearchShardIterator> remoteShardIterators;
-                                if (searchContext != null) {
-                                    remoteAliasFilters = searchContext.aliasFilter();
-                                    remoteShardIterators = getRemoteShardsIteratorFromPointInTime(searchShardsResponses,
-                                        searchContext, rewritten.pointInTimeBuilder().getKeepAlive(), remoteClusterIndices);
-                                } else {
-                                    remoteAliasFilters = getRemoteAliasFilters(searchShardsResponses);
-                                    remoteShardIterators = getRemoteShardsIterator(searchShardsResponses, remoteClusterIndices,
-                                        remoteAliasFilters);
-                                }
-                                int localClusters = localIndices == null ? 0 : 1;
-                                int totalClusters = remoteClusterIndices.size() + localClusters;
-                                int successfulClusters = searchShardsResponses.size() + localClusters;
-                                executeSearch((SearchTask) task, timeProvider, rewritten, localIndices, remoteShardIterators,
-                                    clusterNodeLookup, clusterState, remoteAliasFilters, listener,
-                                    new SearchResponse.Clusters(totalClusters, successfulClusters, skippedClusters.get()),
-                                    searchContext, searchAsyncActionProvider);
-                            },
-                            listener::onFailure));
+                    collectSearchShards(
+                        rewritten.indicesOptions(),
+                        rewritten.preference(),
+                        rewritten.routing(),
+                        skippedClusters,
+                        remoteClusterIndices,
+                        remoteClusterService,
+                        threadPool,
+                        ActionListener.wrap(searchShardsResponses -> {
+                            final BiFunction<String, String, DiscoveryNode> clusterNodeLookup = getRemoteClusterNodeLookup(
+                                searchShardsResponses
+                            );
+                            final Map<String, AliasFilter> remoteAliasFilters;
+                            final List<SearchShardIterator> remoteShardIterators;
+                            if (searchContext != null) {
+                                remoteAliasFilters = searchContext.aliasFilter();
+                                remoteShardIterators = getRemoteShardsIteratorFromPointInTime(
+                                    searchShardsResponses,
+                                    searchContext,
+                                    rewritten.pointInTimeBuilder().getKeepAlive(),
+                                    remoteClusterIndices
+                                );
+                            } else {
+                                remoteAliasFilters = getRemoteAliasFilters(searchShardsResponses);
+                                remoteShardIterators = getRemoteShardsIterator(
+                                    searchShardsResponses,
+                                    remoteClusterIndices,
+                                    remoteAliasFilters
+                                );
+                            }
+                            int localClusters = localIndices == null ? 0 : 1;
+                            int totalClusters = remoteClusterIndices.size() + localClusters;
+                            int successfulClusters = searchShardsResponses.size() + localClusters;
+                            executeSearch(
+                                task,
+                                timeProvider,
+                                rewritten,
+                                localIndices,
+                                remoteShardIterators,
+                                clusterNodeLookup,
+                                clusterState,
+                                remoteAliasFilters,
+                                listener,
+                                new SearchResponse.Clusters(totalClusters, successfulClusters, skippedClusters.get()),
+                                searchContext,
+                                searchAsyncActionProvider
+                            );
+                        }, listener::onFailure)
+                    );
                 }
             }
         }, listener::onFailure);
-        Rewriteable.rewriteAndFetch(original, searchService.getRewriteContext(timeProvider::getAbsoluteStartMillis),
-            rewriteListener);
+        Rewriteable.rewriteAndFetch(original, searchService.getRewriteContext(timeProvider::absoluteStartMillis), rewriteListener);
+    }
+
+    static void adjustSearchType(SearchRequest searchRequest, boolean singleShard) {
+        // optimize search type for cases where there is only one shard group to search on
+        if (singleShard) {
+            // if we only have one group, then we always want Q_T_F, no need for DFS, and no need to do THEN since we hit one shard
+            searchRequest.searchType(QUERY_THEN_FETCH);
+        }
+
+        // if there's only suggest, disable request cache and always use QUERY_THEN_FETCH
+        if (searchRequest.isSuggestOnly()) {
+            searchRequest.requestCache(false);
+            searchRequest.searchType(QUERY_THEN_FETCH);
+        }
+
+        // if there's a kNN search, always use DFS_QUERY_THEN_FETCH
+        if (searchRequest.hasKnnSearch()) {
+            searchRequest.searchType(DFS_QUERY_THEN_FETCH);
+        }
     }
 
     static boolean shouldMinimizeRoundtrips(SearchRequest searchRequest) {
@@ -342,40 +510,74 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
         if (searchRequest.searchType() == DFS_QUERY_THEN_FETCH) {
             return false;
         }
+        if (searchRequest.hasKnnSearch()) {
+            return false;
+        }
         SearchSourceBuilder source = searchRequest.source();
-        return source == null || source.collapse() == null || source.collapse().getInnerHits() == null ||
-            source.collapse().getInnerHits().isEmpty();
+        return source == null
+            || source.collapse() == null
+            || source.collapse().getInnerHits() == null
+            || source.collapse().getInnerHits().isEmpty();
     }
 
-    static void ccsRemoteReduce(TaskId parentTaskId, SearchRequest searchRequest, OriginalIndices localIndices,
-                                Map<String, OriginalIndices> remoteIndices, SearchTimeProvider timeProvider,
-                                InternalAggregation.ReduceContextBuilder aggReduceContextBuilder,
-                                RemoteClusterService remoteClusterService, ThreadPool threadPool, ActionListener<SearchResponse> listener,
-                                BiConsumer<SearchRequest, ActionListener<SearchResponse>> localSearchConsumer) {
+    static void ccsRemoteReduce(
+        TaskId parentTaskId,
+        SearchRequest searchRequest,
+        OriginalIndices localIndices,
+        Map<String, OriginalIndices> remoteIndices,
+        SearchTimeProvider timeProvider,
+        AggregationReduceContext.Builder aggReduceContextBuilder,
+        RemoteClusterService remoteClusterService,
+        ThreadPool threadPool,
+        ActionListener<SearchResponse> listener,
+        BiConsumer<SearchRequest, ActionListener<SearchResponse>> localSearchConsumer
+    ) {
 
         if (localIndices == null && remoteIndices.size() == 1) {
-            //if we are searching against a single remote cluster, we simply forward the original search request to such cluster
-            //and we directly perform final reduction in the remote cluster
+            // if we are searching against a single remote cluster, we simply forward the original search request to such cluster
+            // and we directly perform final reduction in the remote cluster
             Map.Entry<String, OriginalIndices> entry = remoteIndices.entrySet().iterator().next();
             String clusterAlias = entry.getKey();
             boolean skipUnavailable = remoteClusterService.isSkipUnavailable(clusterAlias);
             OriginalIndices indices = entry.getValue();
-            SearchRequest ccsSearchRequest = SearchRequest.subSearchRequest(parentTaskId, searchRequest, indices.indices(),
-                clusterAlias, timeProvider.getAbsoluteStartMillis(), true);
+            SearchRequest ccsSearchRequest = SearchRequest.subSearchRequest(
+                parentTaskId,
+                searchRequest,
+                indices.indices(),
+                clusterAlias,
+                timeProvider.absoluteStartMillis(),
+                true
+            );
             Client remoteClusterClient = remoteClusterService.getRemoteClusterClient(threadPool, clusterAlias);
             remoteClusterClient.search(ccsSearchRequest, new ActionListener<SearchResponse>() {
                 @Override
                 public void onResponse(SearchResponse searchResponse) {
-                    Map<String, ProfileShardResult> profileResults = searchResponse.getProfileResults();
-                    SearchProfileShardResults profile = profileResults == null || profileResults.isEmpty()
-                        ? null : new SearchProfileShardResults(profileResults);
-                    InternalSearchResponse internalSearchResponse = new InternalSearchResponse(searchResponse.getHits(),
-                        (InternalAggregations) searchResponse.getAggregations(), searchResponse.getSuggest(), profile,
-                        searchResponse.isTimedOut(), searchResponse.isTerminatedEarly(), searchResponse.getNumReducePhases());
-                    listener.onResponse(new SearchResponse(internalSearchResponse, searchResponse.getScrollId(),
-                        searchResponse.getTotalShards(), searchResponse.getSuccessfulShards(), searchResponse.getSkippedShards(),
-                        timeProvider.buildTookInMillis(), searchResponse.getShardFailures(), new SearchResponse.Clusters(1, 1, 0),
-                        searchResponse.pointInTimeId()));
+                    Map<String, SearchProfileShardResult> profileResults = searchResponse.getProfileResults();
+                    SearchProfileResults profile = profileResults == null || profileResults.isEmpty()
+                        ? null
+                        : new SearchProfileResults(profileResults);
+                    InternalSearchResponse internalSearchResponse = new InternalSearchResponse(
+                        searchResponse.getHits(),
+                        (InternalAggregations) searchResponse.getAggregations(),
+                        searchResponse.getSuggest(),
+                        profile,
+                        searchResponse.isTimedOut(),
+                        searchResponse.isTerminatedEarly(),
+                        searchResponse.getNumReducePhases()
+                    );
+                    listener.onResponse(
+                        new SearchResponse(
+                            internalSearchResponse,
+                            searchResponse.getScrollId(),
+                            searchResponse.getTotalShards(),
+                            searchResponse.getSuccessfulShards(),
+                            searchResponse.getSkippedShards(),
+                            timeProvider.buildTookInMillis(),
+                            searchResponse.getShardFailures(),
+                            new SearchResponse.Clusters(1, 1, 0),
+                            searchResponse.pointInTimeId()
+                        )
+                    );
                 }
 
                 @Override
@@ -389,7 +591,10 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
             });
         } else {
             SearchResponseMerger searchResponseMerger = createSearchResponseMerger(
-                    searchRequest.source(), timeProvider, aggReduceContextBuilder);
+                searchRequest.source(),
+                timeProvider,
+                aggReduceContextBuilder
+            );
             AtomicInteger skippedClusters = new AtomicInteger(0);
             final AtomicReference<Exception> exceptions = new AtomicReference<>();
             int totalClusters = remoteIndices.size() + (localIndices == null ? 0 : 1);
@@ -398,25 +603,56 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
                 String clusterAlias = entry.getKey();
                 boolean skipUnavailable = remoteClusterService.isSkipUnavailable(clusterAlias);
                 OriginalIndices indices = entry.getValue();
-                SearchRequest ccsSearchRequest = SearchRequest.subSearchRequest(parentTaskId, searchRequest, indices.indices(),
-                    clusterAlias, timeProvider.getAbsoluteStartMillis(), false);
-                ActionListener<SearchResponse> ccsListener = createCCSListener(clusterAlias, skipUnavailable, countDown,
-                    skippedClusters, exceptions, searchResponseMerger, totalClusters,  listener);
+                SearchRequest ccsSearchRequest = SearchRequest.subSearchRequest(
+                    parentTaskId,
+                    searchRequest,
+                    indices.indices(),
+                    clusterAlias,
+                    timeProvider.absoluteStartMillis(),
+                    false
+                );
+                ActionListener<SearchResponse> ccsListener = createCCSListener(
+                    clusterAlias,
+                    skipUnavailable,
+                    countDown,
+                    skippedClusters,
+                    exceptions,
+                    searchResponseMerger,
+                    totalClusters,
+                    listener
+                );
                 Client remoteClusterClient = remoteClusterService.getRemoteClusterClient(threadPool, clusterAlias);
                 remoteClusterClient.search(ccsSearchRequest, ccsListener);
             }
             if (localIndices != null) {
-                ActionListener<SearchResponse> ccsListener = createCCSListener(RemoteClusterAware.LOCAL_CLUSTER_GROUP_KEY,
-                    false, countDown, skippedClusters, exceptions, searchResponseMerger, totalClusters, listener);
-                SearchRequest ccsLocalSearchRequest = SearchRequest.subSearchRequest(parentTaskId, searchRequest, localIndices.indices(),
-                    RemoteClusterAware.LOCAL_CLUSTER_GROUP_KEY, timeProvider.getAbsoluteStartMillis(), false);
+                ActionListener<SearchResponse> ccsListener = createCCSListener(
+                    RemoteClusterAware.LOCAL_CLUSTER_GROUP_KEY,
+                    false,
+                    countDown,
+                    skippedClusters,
+                    exceptions,
+                    searchResponseMerger,
+                    totalClusters,
+                    listener
+                );
+                SearchRequest ccsLocalSearchRequest = SearchRequest.subSearchRequest(
+                    parentTaskId,
+                    searchRequest,
+                    localIndices.indices(),
+                    RemoteClusterAware.LOCAL_CLUSTER_GROUP_KEY,
+                    timeProvider.absoluteStartMillis(),
+                    false
+                );
                 localSearchConsumer.accept(ccsLocalSearchRequest, ccsListener);
             }
         }
     }
 
-    static SearchResponseMerger createSearchResponseMerger(SearchSourceBuilder source, SearchTimeProvider timeProvider,
-                                                           InternalAggregation.ReduceContextBuilder aggReduceContextBuilder) {
+    static SearchResponseMerger createSearchResponseMerger(
+        SearchSourceBuilder source,
+        SearchTimeProvider timeProvider,
+        AggregationReduceContext.Builder aggReduceContextBuilder
+    ) {
         final int from;
         final int size;
         final int trackTotalHitsUpTo;
@@ -428,17 +664,25 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
             from = source.from() == -1 ? SearchService.DEFAULT_FROM : source.from();
             size = source.size() == -1 ? SearchService.DEFAULT_SIZE : source.size();
             trackTotalHitsUpTo = source.trackTotalHitsUpTo() == null
-                ? SearchContext.DEFAULT_TRACK_TOTAL_HITS_UP_TO : source.trackTotalHitsUpTo();
-            //here we modify the original source so we can re-use it by setting it to each outgoing search request
+                ? SearchContext.DEFAULT_TRACK_TOTAL_HITS_UP_TO
+                : source.trackTotalHitsUpTo();
+            // here we modify the original source so we can re-use it by setting it to each outgoing search request
             source.from(0);
             source.size(from + size);
         }
         return new SearchResponseMerger(from, size, trackTotalHitsUpTo, timeProvider, aggReduceContextBuilder);
     }
 
-    static void collectSearchShards(IndicesOptions indicesOptions, String preference, String routing, AtomicInteger skippedClusters,
-                                    Map<String, OriginalIndices> remoteIndicesByCluster, RemoteClusterService remoteClusterService,
-                                    ThreadPool threadPool, ActionListener<Map<String, ClusterSearchShardsResponse>> listener) {
+    static void collectSearchShards(
+        IndicesOptions indicesOptions,
+        String preference,
+        String routing,
+        AtomicInteger skippedClusters,
+        Map<String, OriginalIndices> remoteIndicesByCluster,
+        RemoteClusterService remoteClusterService,
+        ThreadPool threadPool,
+        ActionListener<Map<String, ClusterSearchShardsResponse>> listener
+    ) {
         final CountDown responsesCountDown = new CountDown(remoteIndicesByCluster.size());
         final Map<String, ClusterSearchShardsResponse> searchShardsResponses = new ConcurrentHashMap<>();
         final AtomicReference<Exception> exceptions = new AtomicReference<>();
@@ -447,31 +691,54 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
             boolean skipUnavailable = remoteClusterService.isSkipUnavailable(clusterAlias);
             Client clusterClient = remoteClusterService.getRemoteClusterClient(threadPool, clusterAlias);
             final String[] indices = entry.getValue().indices();
-            ClusterSearchShardsRequest searchShardsRequest = new ClusterSearchShardsRequest(indices)
-                .indicesOptions(indicesOptions).local(true).preference(preference).routing(routing);
-            clusterClient.admin().cluster().searchShards(searchShardsRequest,
-                new CCSActionListener<ClusterSearchShardsResponse, Map<String, ClusterSearchShardsResponse>>(
-                    clusterAlias, skipUnavailable, responsesCountDown, skippedClusters, exceptions, listener) {
-                    @Override
-                    void innerOnResponse(ClusterSearchShardsResponse clusterSearchShardsResponse) {
-                        searchShardsResponses.put(clusterAlias, clusterSearchShardsResponse);
-                    }
+            ClusterSearchShardsRequest searchShardsRequest = new ClusterSearchShardsRequest(indices).indicesOptions(indicesOptions)
+                .local(true)
+                .preference(preference)
+                .routing(routing);
+            clusterClient.admin()
+                .cluster()
+                .searchShards(
+                    searchShardsRequest,
+                    new CCSActionListener<ClusterSearchShardsResponse, Map<String, ClusterSearchShardsResponse>>(
+                        clusterAlias,
+                        skipUnavailable,
+                        responsesCountDown,
+                        skippedClusters,
+                        exceptions,
+                        listener
+                    ) {
+                        @Override
+                        void innerOnResponse(ClusterSearchShardsResponse clusterSearchShardsResponse) {
+                            searchShardsResponses.put(clusterAlias, clusterSearchShardsResponse);
+                        }
 
-                    @Override
-                    Map<String, ClusterSearchShardsResponse> createFinalResponse() {
-                        return searchShardsResponses;
+                        @Override
+                        Map<String, ClusterSearchShardsResponse> createFinalResponse() {
+                            return searchShardsResponses;
+                        }
                     }
-                }
-            );
+                );
         }
     }
 
-    private static ActionListener<SearchResponse> createCCSListener(String clusterAlias, boolean skipUnavailable, CountDown countDown,
-                                                             AtomicInteger skippedClusters, AtomicReference<Exception> exceptions,
-                                                             SearchResponseMerger searchResponseMerger, int totalClusters,
-                                                             ActionListener<SearchResponse> originalListener) {
-        return new CCSActionListener<SearchResponse, SearchResponse>(clusterAlias, skipUnavailable, countDown, skippedClusters,
-            exceptions, originalListener) {
+    private static ActionListener<SearchResponse> createCCSListener(
+        String clusterAlias,
+        boolean skipUnavailable,
+        CountDown countDown,
+        AtomicInteger skippedClusters,
+        AtomicReference<Exception> exceptions,
+        SearchResponseMerger searchResponseMerger,
+        int totalClusters,
+        ActionListener<SearchResponse> originalListener
+    ) {
+        return new CCSActionListener<SearchResponse, SearchResponse>(
+            clusterAlias,
+            skipUnavailable,
+            countDown,
+            skippedClusters,
+            exceptions,
+            originalListener
+        ) {
             @Override
             void innerOnResponse(SearchResponse searchResponse) {
                 searchResponseMerger.add(searchResponse);
@@ -479,20 +746,40 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
 
             @Override
             SearchResponse createFinalResponse() {
-                SearchResponse.Clusters clusters = new SearchResponse.Clusters(totalClusters, searchResponseMerger.numResponses(),
-                    skippedClusters.get());
+                SearchResponse.Clusters clusters = new SearchResponse.Clusters(
+                    totalClusters,
+                    searchResponseMerger.numResponses(),
+                    skippedClusters.get()
+                );
                 return searchResponseMerger.getMergedResponse(clusters);
             }
         };
     }
 
-    private void executeLocalSearch(Task task, SearchTimeProvider timeProvider, SearchRequest searchRequest, OriginalIndices localIndices,
-                                    ClusterState clusterState, ActionListener<SearchResponse> listener,
-                                    SearchContextId searchContext,
-                                    SearchAsyncActionProvider searchAsyncActionProvider) {
-        executeSearch((SearchTask)task, timeProvider, searchRequest, localIndices, Collections.emptyList(),
-            (clusterName, nodeId) -> null, clusterState, Collections.emptyMap(), listener, SearchResponse.Clusters.EMPTY,
-            searchContext, searchAsyncActionProvider);
+    private void executeLocalSearch(
+        Task task,
+        SearchTimeProvider timeProvider,
+        SearchRequest searchRequest,
+        OriginalIndices localIndices,
+        ClusterState clusterState,
+        ActionListener<SearchResponse> listener,
+        SearchContextId searchContext,
+        SearchAsyncActionProvider searchAsyncActionProvider
+    ) {
+        executeSearch(
+            (SearchTask) task,
+            timeProvider,
+            searchRequest,
+            localIndices,
+            Collections.emptyList(),
+            (clusterName, nodeId) -> null,
+            clusterState,
+            Collections.emptyMap(),
+            listener,
+            SearchResponse.Clusters.EMPTY,
+            searchContext,
+            searchAsyncActionProvider
+        );
     }
 
     static BiFunction<String, String, DiscoveryNode> getRemoteClusterNodeLookup(Map<String, ClusterSearchShardsResponse> searchShardsResp) {
@@ -533,34 +820,41 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
         return aliasFilterMap;
     }
 
-    static List<SearchShardIterator> getRemoteShardsIterator(Map<String, ClusterSearchShardsResponse> searchShardsResponses,
-                                                             Map<String, OriginalIndices> remoteIndicesByCluster,
-                                                             Map<String, AliasFilter> aliasFilterMap) {
+    static List<SearchShardIterator> getRemoteShardsIterator(
+        Map<String, ClusterSearchShardsResponse> searchShardsResponses,
+        Map<String, OriginalIndices> remoteIndicesByCluster,
+        Map<String, AliasFilter> aliasFilterMap
+    ) {
         final List<SearchShardIterator> remoteShardIterators = new ArrayList<>();
         for (Map.Entry<String, ClusterSearchShardsResponse> entry : searchShardsResponses.entrySet()) {
             for (ClusterSearchShardsGroup clusterSearchShardsGroup : entry.getValue().getGroups()) {
-                //add the cluster name to the remote index names for indices disambiguation
-                //this ends up in the hits returned with the search response
+                // add the cluster name to the remote index names for indices disambiguation
+                // this ends up in the hits returned with the search response
                 ShardId shardId = clusterSearchShardsGroup.getShardId();
                 AliasFilter aliasFilter = aliasFilterMap.get(shardId.getIndex().getUUID());
                 String[] aliases = aliasFilter.getAliases();
                 String clusterAlias = entry.getKey();
-                String[] finalIndices = aliases.length == 0 ? new String[]{shardId.getIndexName()} : aliases;
+                String[] finalIndices = aliases.length == 0 ? new String[] { shardId.getIndexName() } : aliases;
                 final OriginalIndices originalIndices = remoteIndicesByCluster.get(clusterAlias);
                 assert originalIndices != null : "original indices are null for clusterAlias: " + clusterAlias;
-                SearchShardIterator shardIterator = new SearchShardIterator(clusterAlias, shardId,
-                    Arrays.asList(clusterSearchShardsGroup.getShards()), new OriginalIndices(finalIndices,
-                    originalIndices.indicesOptions()));
+                SearchShardIterator shardIterator = new SearchShardIterator(
+                    clusterAlias,
+                    shardId,
+                    Arrays.asList(clusterSearchShardsGroup.getShards()),
+                    new OriginalIndices(finalIndices, originalIndices.indicesOptions())
+                );
                 remoteShardIterators.add(shardIterator);
             }
         }
         return remoteShardIterators;
     }
 
-    static List<SearchShardIterator> getRemoteShardsIteratorFromPointInTime(Map<String, ClusterSearchShardsResponse> searchShardsResponses,
-                                                                            SearchContextId searchContextId,
-                                                                            TimeValue searchContextKeepAlive,
-                                                                            Map<String, OriginalIndices> remoteClusterIndices) {
+    static List<SearchShardIterator> getRemoteShardsIteratorFromPointInTime(
+        Map<String, ClusterSearchShardsResponse> searchShardsResponses,
+        SearchContextId searchContextId,
+        TimeValue searchContextKeepAlive,
+        Map<String, OriginalIndices> remoteClusterIndices
+    ) {
         final List<SearchShardIterator> remoteShardIterators = new ArrayList<>();
         for (Map.Entry<String, ClusterSearchShardsResponse> entry : searchShardsResponses.entrySet()) {
             for (ClusterSearchShardsGroup group : entry.getValue().getGroups()) {
@@ -577,31 +871,72 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
                         }
                     }
                 }
-                SearchShardIterator shardIterator = new SearchShardIterator(clusterAlias, shardId, targetNodes,
-                    remoteClusterIndices.get(clusterAlias), perNode.getSearchContextId(), searchContextKeepAlive);
+                assert remoteClusterIndices.get(clusterAlias) != null : "original indices are null for clusterAlias: " + clusterAlias;
+                final OriginalIndices finalIndices = new OriginalIndices(
+                    new String[] { shardId.getIndexName() },
+                    remoteClusterIndices.get(clusterAlias).indicesOptions()
+                );
+                SearchShardIterator shardIterator = new SearchShardIterator(
+                    clusterAlias,
+                    shardId,
+                    targetNodes,
+                    finalIndices,
+                    perNode.getSearchContextId(),
+                    searchContextKeepAlive
+                );
                 remoteShardIterators.add(shardIterator);
             }
         }
         return remoteShardIterators;
     }
 
-    private Index[] resolveLocalIndices(OriginalIndices localIndices,
-                                ClusterState clusterState,
-                                SearchTimeProvider timeProvider) {
+    private Index[] resolveLocalIndices(OriginalIndices localIndices, ClusterState clusterState, SearchTimeProvider timeProvider) {
         if (localIndices == null) {
-            return Index.EMPTY_ARRAY; //don't search on any local index (happens when only remote indices were specified)
+            return Index.EMPTY_ARRAY; // don't search on any local index (happens when only remote indices were specified)
         }
-        return indexNameExpressionResolver.concreteIndices(clusterState, localIndices, timeProvider.getAbsoluteStartMillis());
+
+        List<String> frozenIndices = null;
+        Index[] indices = indexNameExpressionResolver.concreteIndices(clusterState, localIndices, timeProvider.absoluteStartMillis());
+        for (Index index : indices) {
+            IndexMetadata indexMetadata = clusterState.metadata().index(index);
+            if (indexMetadata.getSettings().getAsBoolean("index.frozen", false)) {
+                if (frozenIndices == null) {
+                    frozenIndices = new ArrayList<>();
+                }
+                frozenIndices.add(index.getName());
+            }
+        }
+        if (frozenIndices != null) {
+            DEPRECATION_LOGGER.warn(
+                DeprecationCategory.INDICES,
+                "search-frozen-indices",
+                FROZEN_INDICES_DEPRECATION_MESSAGE,
+                String.join(",", frozenIndices)
+            );
+        }
+        return indices;
     }
 
-    private void executeSearch(SearchTask task, SearchTimeProvider timeProvider, SearchRequest searchRequest,
-                               OriginalIndices localIndices, List<SearchShardIterator> remoteShardIterators,
-                               BiFunction<String, String, DiscoveryNode> remoteConnections, ClusterState clusterState,
-                               Map<String, AliasFilter> remoteAliasMap, ActionListener<SearchResponse> listener,
-                               SearchResponse.Clusters clusters, @Nullable SearchContextId searchContext,
-                               SearchAsyncActionProvider searchAsyncActionProvider) {
+    private void executeSearch(
+        SearchTask task,
+        SearchTimeProvider timeProvider,
+        SearchRequest searchRequest,
+        OriginalIndices localIndices,
+        List<SearchShardIterator> remoteShardIterators,
+        BiFunction<String, String, DiscoveryNode> remoteConnections,
+        ClusterState clusterState,
+        Map<String, AliasFilter> remoteAliasMap,
+        ActionListener<SearchResponse> listener,
+        SearchResponse.Clusters clusters,
+        @Nullable SearchContextId searchContext,
+        SearchAsyncActionProvider searchAsyncActionProvider
+    ) {
 
         clusterState.blocks().globalBlockedRaiseException(ClusterBlockLevel.READ);
+        if (searchRequest.allowPartialSearchResults() == null) {
+            // No user preference defined in search request - apply cluster service default
+            searchRequest.allowPartialSearchResults(searchService.defaultAllowPartialSearchResults());
+        }
 
         // TODO: I think startTime() should become part of ActionRequest and that should be used both for index name
         // date math expressions and $now in scripts. This way all apis will deal with now in the same way instead
@@ -614,68 +949,100 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
             assert searchRequest.pointInTimeBuilder() != null;
             aliasFilter = searchContext.aliasFilter();
             concreteLocalIndices = localIndices == null ? new String[0] : localIndices.indices();
-            localShardIterators = getLocalLocalShardsIteratorFromPointInTime(clusterState, localIndices,
-                searchRequest.getLocalClusterAlias(), searchContext, searchRequest.pointInTimeBuilder().getKeepAlive());
+            localShardIterators = getLocalLocalShardsIteratorFromPointInTime(
+                clusterState,
+                localIndices,
+                searchRequest.getLocalClusterAlias(),
+                searchContext,
+                searchRequest.pointInTimeBuilder().getKeepAlive(),
+                searchRequest.allowPartialSearchResults()
+            );
         } else {
             final Index[] indices = resolveLocalIndices(localIndices, clusterState, timeProvider);
-            Map<String, Set<String>> routingMap = indexNameExpressionResolver.resolveSearchRouting(clusterState, searchRequest.routing(),
-                searchRequest.indices());
+            Map<String, Set<String>> routingMap = indexNameExpressionResolver.resolveSearchRouting(
+                clusterState,
+                searchRequest.routing(),
+                searchRequest.indices()
+            );
             routingMap = routingMap == null ? Collections.emptyMap() : Collections.unmodifiableMap(routingMap);
             concreteLocalIndices = new String[indices.length];
             for (int i = 0; i < indices.length; i++) {
                 concreteLocalIndices[i] = indices[i].getName();
             }
             Map<String, Long> nodeSearchCounts = searchTransportService.getPendingSearchRequests();
-            GroupShardsIterator<ShardIterator> localShardRoutings = clusterService.operationRouting().searchShards(clusterState,
-                concreteLocalIndices, routingMap, searchRequest.preference(),
-                searchService.getResponseCollectorService(), nodeSearchCounts);
-            localShardIterators = StreamSupport.stream(localShardRoutings.spliterator(), false)
-                .map(it -> new SearchShardIterator(
-                    searchRequest.getLocalClusterAlias(), it.shardId(), it.getShardRoutings(), localIndices))
-                .collect(Collectors.toList());
-            aliasFilter = buildPerIndexAliasFilter(searchRequest, clusterState, indices, remoteAliasMap);
+            GroupShardsIterator<ShardIterator> localShardRoutings = clusterService.operationRouting()
+                .searchShards(
+                    clusterState,
+                    concreteLocalIndices,
+                    routingMap,
+                    searchRequest.preference(),
+                    searchService.getResponseCollectorService(),
+                    nodeSearchCounts
+                );
+            final Set<String> indicesAndAliases = indexNameExpressionResolver.resolveExpressions(clusterState, searchRequest.indices());
+            aliasFilter = buildPerIndexAliasFilter(clusterState, indicesAndAliases, indices, remoteAliasMap);
+            final Map<String, OriginalIndices> finalIndicesMap = buildPerIndexOriginalIndices(
+                clusterState,
+                indicesAndAliases,
+                indices,
+                searchRequest.indicesOptions()
+            );
+            localShardIterators = StreamSupport.stream(localShardRoutings.spliterator(), false).map(it -> {
+                OriginalIndices finalIndices = finalIndicesMap.get(it.shardId().getIndex().getUUID());
+                assert finalIndices != null;
+                return new SearchShardIterator(searchRequest.getLocalClusterAlias(), it.shardId(), it.getShardRoutings(), finalIndices);
+            }).toList();
         }
         final GroupShardsIterator<SearchShardIterator> shardIterators = mergeShardsIterators(localShardIterators, remoteShardIterators);
 
         failIfOverShardCountLimit(clusterService, shardIterators.size());
 
-        Map<String, Float> concreteIndexBoosts = resolveIndexBoosts(searchRequest, clusterState);
-
-        // optimize search type for cases where there is only one shard group to search on
-        if (shardIterators.size() == 1) {
-            // if we only have one group, then we always want Q_T_F, no need for DFS, and no need to do THEN since we hit one shard
-            searchRequest.searchType(QUERY_THEN_FETCH);
-        }
-        if (searchRequest.allowPartialSearchResults() == null) {
-            // No user preference defined in search request - apply cluster service default
-            searchRequest.allowPartialSearchResults(searchService.defaultAllowPartialSearchResults());
-        }
-        if (searchRequest.isSuggestOnly()) {
-            // disable request cache if we have only suggest
-            searchRequest.requestCache(false);
-            switch (searchRequest.searchType()) {
-                case DFS_QUERY_THEN_FETCH:
-                    // convert to Q_T_F if we have only suggest
-                    searchRequest.searchType(QUERY_THEN_FETCH);
-                    break;
+        if (searchRequest.getWaitForCheckpoints().isEmpty() == false) {
+            if (remoteShardIterators.isEmpty() == false) {
+                throw new IllegalArgumentException("Cannot use wait_for_checkpoints parameter with cross-cluster searches.");
+            } else {
+                validateAndResolveWaitForCheckpoint(clusterState, indexNameExpressionResolver, searchRequest, concreteLocalIndices);
             }
         }
+
+        Map<String, Float> concreteIndexBoosts = resolveIndexBoosts(searchRequest, clusterState);
+
+        adjustSearchType(searchRequest, shardIterators.size() == 1);
+
         final DiscoveryNodes nodes = clusterState.nodes();
-        BiFunction<String, String, Transport.Connection> connectionLookup = buildConnectionLookup(searchRequest.getLocalClusterAlias(),
-            nodes::get, remoteConnections, searchTransportService::getConnection);
+        BiFunction<String, String, Transport.Connection> connectionLookup = buildConnectionLookup(
+            searchRequest.getLocalClusterAlias(),
+            nodes::get,
+            remoteConnections,
+            searchTransportService::getConnection
+        );
         final Executor asyncSearchExecutor = asyncSearchExecutor(concreteLocalIndices);
-        final boolean preFilterSearchShards = shouldPreFilterSearchShards(clusterState, searchRequest, concreteLocalIndices,
-            localShardIterators.size() + remoteShardIterators.size());
+        final boolean preFilterSearchShards = shouldPreFilterSearchShards(
+            clusterState,
+            searchRequest,
+            concreteLocalIndices,
+            localShardIterators.size() + remoteShardIterators.size(),
+            defaultPreFilterShardSize
+        );
         searchAsyncActionProvider.asyncSearchAction(
-            task, searchRequest, asyncSearchExecutor, shardIterators, timeProvider, connectionLookup, clusterState,
-            Collections.unmodifiableMap(aliasFilter), concreteIndexBoosts, listener,
-            preFilterSearchShards, threadPool, clusters).start();
+            task,
+            searchRequest,
+            asyncSearchExecutor,
+            shardIterators,
+            timeProvider,
+            connectionLookup,
+            clusterState,
+            Collections.unmodifiableMap(aliasFilter),
+            concreteIndexBoosts,
+            listener,
+            preFilterSearchShards,
+            threadPool,
+            clusters
+        ).start();
     }
 
     Executor asyncSearchExecutor(final String[] indices) {
-        final List<String> executorsForIndices = Arrays.stream(indices)
-            .map(executorSelector::executorForSearch)
-            .collect(Collectors.toList());
+        final List<String> executorsForIndices = Arrays.stream(indices).map(executorSelector::executorForSearch).toList();
         if (executorsForIndices.size() == 1) { // all indices have same executor
             return threadPool.executor(executorsForIndices.get(0));
         }
@@ -687,10 +1054,12 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
         return threadPool.executor(ThreadPool.Names.SEARCH);
     }
 
-    static BiFunction<String, String, Transport.Connection> buildConnectionLookup(String requestClusterAlias,
-                                                              Function<String, DiscoveryNode> localNodes,
-                                                              BiFunction<String, String, DiscoveryNode> remoteNodes,
-                                                              BiFunction<String, DiscoveryNode, Transport.Connection> nodeToConnection) {
+    static BiFunction<String, String, Transport.Connection> buildConnectionLookup(
+        String requestClusterAlias,
+        Function<String, DiscoveryNode> localNodes,
+        BiFunction<String, String, DiscoveryNode> remoteNodes,
+        BiFunction<String, DiscoveryNode, Transport.Connection> nodeToConnection
+    ) {
         return (clusterAlias, nodeId) -> {
             final DiscoveryNode discoveryNode;
             final boolean remoteCluster;
@@ -709,21 +1078,23 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
         };
     }
 
-    static boolean shouldPreFilterSearchShards(ClusterState clusterState,
-                                               SearchRequest searchRequest,
-                                               String[] indices,
-                                               int numShards) {
+    static boolean shouldPreFilterSearchShards(
+        ClusterState clusterState,
+        SearchRequest searchRequest,
+        String[] indices,
+        int numShards,
+        int defaultPreFilterShardSize
+    ) {
         SearchSourceBuilder source = searchRequest.source();
         Integer preFilterShardSize = searchRequest.getPreFilterShardSize();
-        if (preFilterShardSize == null
-                && (hasReadOnlyIndices(indices, clusterState) || hasPrimaryFieldSort(source))) {
+        if (preFilterShardSize == null && (hasReadOnlyIndices(indices, clusterState) || hasPrimaryFieldSort(source))) {
             preFilterShardSize = 1;
         } else if (preFilterShardSize == null) {
-            preFilterShardSize = SearchRequest.DEFAULT_PRE_FILTER_SHARD_SIZE;
+            preFilterShardSize = defaultPreFilterShardSize;
         }
         return searchRequest.searchType() == QUERY_THEN_FETCH // we can't do this for DFS it needs to fan out to all shards all the time
-                    && (SearchService.canRewriteToMatchNone(source) || hasPrimaryFieldSort(source))
-                    && preFilterShardSize < numShards;
+            && (SearchService.canRewriteToMatchNone(source) || hasPrimaryFieldSort(source))
+            && preFilterShardSize < numShards;
     }
 
     private static boolean hasReadOnlyIndices(String[] indices, ClusterState clusterState) {
@@ -736,22 +1107,34 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
         return false;
     }
 
-    static GroupShardsIterator<SearchShardIterator> mergeShardsIterators(List<SearchShardIterator> localShardIterators,
-                                                                         List<SearchShardIterator> remoteShardIterators) {
+    static GroupShardsIterator<SearchShardIterator> mergeShardsIterators(
+        List<SearchShardIterator> localShardIterators,
+        List<SearchShardIterator> remoteShardIterators
+    ) {
         List<SearchShardIterator> shards = new ArrayList<>(remoteShardIterators);
         shards.addAll(localShardIterators);
         return GroupShardsIterator.sortAndCreate(shards);
     }
 
     interface SearchAsyncActionProvider {
-        AbstractSearchAsyncAction<? extends SearchPhaseResult> asyncSearchAction(
-            SearchTask task, SearchRequest searchRequest, Executor executor, GroupShardsIterator<SearchShardIterator> shardIterators,
-            SearchTimeProvider timeProvider, BiFunction<String, String, Transport.Connection> connectionLookup,
-            ClusterState clusterState, Map<String, AliasFilter> aliasFilter, Map<String, Float> concreteIndexBoosts,
-            ActionListener<SearchResponse> listener, boolean preFilter, ThreadPool threadPool, SearchResponse.Clusters clusters);
+        SearchPhase asyncSearchAction(
+            SearchTask task,
+            SearchRequest searchRequest,
+            Executor executor,
+            GroupShardsIterator<SearchShardIterator> shardIterators,
+            SearchTimeProvider timeProvider,
+            BiFunction<String, String, Transport.Connection> connectionLookup,
+            ClusterState clusterState,
+            Map<String, AliasFilter> aliasFilter,
+            Map<String, Float> concreteIndexBoosts,
+            ActionListener<SearchResponse> listener,
+            boolean preFilter,
+            ThreadPool threadPool,
+            SearchResponse.Clusters clusters
+        );
     }
 
-    private AbstractSearchAsyncAction<? extends SearchPhaseResult> searchAsyncAction(
+    private SearchPhase searchAsyncAction(
         SearchTask task,
         SearchRequest searchRequest,
         Executor executor,
@@ -764,63 +1147,171 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
         ActionListener<SearchResponse> listener,
         boolean preFilter,
         ThreadPool threadPool,
-        SearchResponse.Clusters clusters) {
+        SearchResponse.Clusters clusters
+    ) {
         if (preFilter) {
-            return new CanMatchPreFilterSearchPhase(logger, searchTransportService, connectionLookup,
-                aliasFilter, concreteIndexBoosts, executor, searchRequest, listener, shardIterators,
-                timeProvider, clusterState, task, (iter) -> {
-                AbstractSearchAsyncAction<? extends SearchPhaseResult> action = searchAsyncAction(
-                    task,
-                    searchRequest,
-                    executor,
-                    iter,
-                    timeProvider,
+            return new CanMatchPreFilterSearchPhase(
+                logger,
+                searchTransportService,
+                connectionLookup,
+                aliasFilter,
+                concreteIndexBoosts,
+                threadPool.executor(ThreadPool.Names.SEARCH_COORDINATION),
+                searchRequest,
+                listener,
+                shardIterators,
+                timeProvider,
+                task,
+                (iter) -> {
+                    SearchPhase action = searchAsyncAction(
+                        task,
+                        searchRequest,
+                        executor,
+                        iter,
+                        timeProvider,
+                        connectionLookup,
+                        clusterState,
+                        aliasFilter,
+                        concreteIndexBoosts,
+                        listener,
+                        false,
+                        threadPool,
+                        clusters
+                    );
+                    assert action instanceof AbstractSearchAsyncAction;
+                    return action;
+                },
+                clusters,
+                searchService.getCoordinatorRewriteContextProvider(timeProvider::absoluteStartMillis)
+            );
+        } else {
+            final QueryPhaseResultConsumer queryResultConsumer = searchPhaseController.newSearchPhaseResults(
+                executor,
+                circuitBreaker,
+                task::isCancelled,
+                task.getProgressListener(),
+                searchRequest,
+                shardIterators.size(),
+                exc -> searchTransportService.cancelSearchTask(task, "failed to merge result [" + exc.getMessage() + "]")
+            );
+            AbstractSearchAsyncAction<? extends SearchPhaseResult> searchAsyncAction = switch (searchRequest.searchType()) {
+                case DFS_QUERY_THEN_FETCH -> new SearchDfsQueryThenFetchAsyncAction(
+                    logger,
+                    searchTransportService,
                     connectionLookup,
-                    clusterState,
                     aliasFilter,
                     concreteIndexBoosts,
+                    executor,
+                    queryResultConsumer,
+                    searchRequest,
                     listener,
-                    false,
-                    threadPool,
-                    clusters);
-                return new SearchPhase(action.getName()) {
-                    @Override
-                    public void run() {
-                        action.start();
-                    }
-                };
-            }, clusters, searchService.getCoordinatorRewriteContextProvider(timeProvider::getAbsoluteStartMillis));
-        } else {
-            final QueryPhaseResultConsumer queryResultConsumer = searchPhaseController.newSearchPhaseResults(executor,
-                circuitBreaker, task.getProgressListener(), searchRequest, shardIterators.size(),
-                exc -> searchTransportService.cancelSearchTask(task, "failed to merge result [" + exc.getMessage() + "]"));
-            AbstractSearchAsyncAction<? extends SearchPhaseResult> searchAsyncAction;
-            switch (searchRequest.searchType()) {
-                case DFS_QUERY_THEN_FETCH:
-                    searchAsyncAction = new SearchDfsQueryThenFetchAsyncAction(logger, searchTransportService, connectionLookup,
-                        aliasFilter, concreteIndexBoosts, searchPhaseController,
-                        executor, queryResultConsumer, searchRequest, listener, shardIterators, timeProvider, clusterState, task, clusters);
-                    break;
-                case QUERY_THEN_FETCH:
-                    searchAsyncAction = new SearchQueryThenFetchAsyncAction(logger, searchTransportService, connectionLookup,
-                        aliasFilter, concreteIndexBoosts, searchPhaseController, executor, queryResultConsumer,
-                        searchRequest, listener, shardIterators, timeProvider, clusterState, task, clusters);
-                    break;
-                default:
-                    throw new IllegalStateException("Unknown search type: [" + searchRequest.searchType() + "]");
-            }
+                    shardIterators,
+                    timeProvider,
+                    clusterState,
+                    task,
+                    clusters
+                );
+                case QUERY_THEN_FETCH -> new SearchQueryThenFetchAsyncAction(
+                    logger,
+                    searchTransportService,
+                    connectionLookup,
+                    aliasFilter,
+                    concreteIndexBoosts,
+                    executor,
+                    queryResultConsumer,
+                    searchRequest,
+                    listener,
+                    shardIterators,
+                    timeProvider,
+                    clusterState,
+                    task,
+                    clusters
+                );
+            };
             return searchAsyncAction;
         }
+    }
+
+    private static void validateAndResolveWaitForCheckpoint(
+        ClusterState clusterState,
+        IndexNameExpressionResolver resolver,
+        SearchRequest searchRequest,
+        String[] concreteLocalIndices
+    ) {
+        HashSet<String> searchedIndices = new HashSet<>(Arrays.asList(concreteLocalIndices));
+        Map<String, long[]> newWaitForCheckpoints = Maps.newMapWithExpectedSize(searchRequest.getWaitForCheckpoints().size());
+        for (Map.Entry<String, long[]> waitForCheckpointIndex : searchRequest.getWaitForCheckpoints().entrySet()) {
+            long[] checkpoints = waitForCheckpointIndex.getValue();
+            int checkpointsProvided = checkpoints.length;
+            String target = waitForCheckpointIndex.getKey();
+            Index resolved;
+            try {
+                resolved = resolver.concreteSingleIndex(clusterState, new IndicesRequest() {
+                    @Override
+                    public String[] indices() {
+                        return new String[] { target };
+                    }
+
+                    @Override
+                    public IndicesOptions indicesOptions() {
+                        return IndicesOptions.strictSingleIndexNoExpandForbidClosed();
+                    }
+                });
+            } catch (Exception e) {
+                throw new IllegalArgumentException(
+                    "Failed to resolve wait_for_checkpoints target ["
+                        + target
+                        + "]. Configured target "
+                        + "must resolve to a single open index.",
+                    e
+                );
+            }
+            String index = resolved.getName();
+            IndexMetadata indexMetadata = clusterState.metadata().index(index);
+            if (searchedIndices.contains(index) == false) {
+                throw new IllegalArgumentException(
+                    "Target configured with wait_for_checkpoints must be a concrete index resolved in "
+                        + "this search. Target ["
+                        + target
+                        + "] is not a concrete index resolved in this search."
+                );
+            } else if (indexMetadata == null) {
+                throw new IllegalArgumentException("Cannot find index configured for wait_for_checkpoints parameter [" + index + "].");
+            } else if (indexMetadata.getNumberOfShards() != checkpointsProvided) {
+                throw new IllegalArgumentException(
+                    "Target configured with wait_for_checkpoints must search the same number of shards as "
+                        + "checkpoints provided. ["
+                        + checkpointsProvided
+                        + "] checkpoints provided. Target ["
+                        + target
+                        + "] which resolved to "
+                        + "index ["
+                        + index
+                        + "] has "
+                        + "["
+                        + indexMetadata.getNumberOfShards()
+                        + "] shards."
+                );
+            }
+            newWaitForCheckpoints.put(index, checkpoints);
+        }
+        searchRequest.setWaitForCheckpoints(Collections.unmodifiableMap(newWaitForCheckpoints));
     }
 
     private static void failIfOverShardCountLimit(ClusterService clusterService, int shardCount) {
         final long shardCountLimit = clusterService.getClusterSettings().get(SHARD_COUNT_LIMIT_SETTING);
         if (shardCount > shardCountLimit) {
-            throw new IllegalArgumentException("Trying to query " + shardCount + " shards, which is over the limit of "
-                + shardCountLimit + ". This limit exists because querying many shards at the same time can make the "
-                + "job of the coordinating node very CPU and/or memory intensive. It is usually a better idea to "
-                + "have a smaller number of larger shards. Update [" + SHARD_COUNT_LIMIT_SETTING.getKey()
-                + "] to a greater value if you really want to query that many shards at the same time.");
+            throw new IllegalArgumentException(
+                "Trying to query "
+                    + shardCount
+                    + " shards, which is over the limit of "
+                    + shardCountLimit
+                    + ". This limit exists because querying many shards at the same time can make the "
+                    + "job of the coordinating node very CPU and/or memory intensive. It is usually a better idea to "
+                    + "have a smaller number of larger shards. Update ["
+                    + SHARD_COUNT_LIMIT_SETTING.getKey()
+                    + "] to a greater value if you really want to query that many shards at the same time."
+            );
         }
     }
 
@@ -832,8 +1323,14 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
         private final AtomicReference<Exception> exceptions;
         private final ActionListener<FinalResponse> originalListener;
 
-        CCSActionListener(String clusterAlias, boolean skipUnavailable, CountDown countDown, AtomicInteger skippedClusters,
-                          AtomicReference<Exception> exceptions, ActionListener<FinalResponse> originalListener) {
+        CCSActionListener(
+            String clusterAlias,
+            boolean skipUnavailable,
+            CountDown countDown,
+            AtomicInteger skippedClusters,
+            AtomicReference<Exception> exceptions,
+            ActionListener<FinalResponse> originalListener
+        ) {
             this.clusterAlias = clusterAlias;
             this.skipUnavailable = skipUnavailable;
             this.countDown = countDown;
@@ -876,7 +1373,7 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
                     FinalResponse response;
                     try {
                         response = createFinalResponse();
-                    } catch(Exception e) {
+                    } catch (Exception e) {
                         originalListener.onFailure(e);
                         return;
                     }
@@ -894,40 +1391,61 @@ public class TransportSearchAction extends HandledTransportAction<SearchRequest,
         return new RemoteTransportException("error while communicating with remote cluster [" + clusterAlias + "]", e);
     }
 
-    static Map<String, OriginalIndices> getIndicesFromSearchContexts(SearchContextId searchContext,
-                                                                     IndicesOptions indicesOptions) {
+    static Map<String, OriginalIndices> getIndicesFromSearchContexts(SearchContextId searchContext, IndicesOptions indicesOptions) {
         final Map<String, Set<String>> indices = new HashMap<>();
         for (Map.Entry<ShardId, SearchContextIdForNode> entry : searchContext.shards().entrySet()) {
-            String clusterAlias = entry.getValue().getClusterAlias() == null ?
-                RemoteClusterAware.LOCAL_CLUSTER_GROUP_KEY : entry.getValue().getClusterAlias();
+            String clusterAlias = entry.getValue().getClusterAlias() == null
+                ? RemoteClusterAware.LOCAL_CLUSTER_GROUP_KEY
+                : entry.getValue().getClusterAlias();
             indices.computeIfAbsent(clusterAlias, k -> new HashSet<>()).add(entry.getKey().getIndexName());
         }
-        return indices.entrySet().stream()
+        return indices.entrySet()
+            .stream()
             .collect(Collectors.toMap(Map.Entry::getKey, e -> new OriginalIndices(e.getValue().toArray(String[]::new), indicesOptions)));
     }
 
-    static List<SearchShardIterator> getLocalLocalShardsIteratorFromPointInTime(ClusterState clusterState,
-                                                                                OriginalIndices originalIndices,
-                                                                                String localClusterAlias,
-                                                                                SearchContextId searchContext,
-                                                                                TimeValue keepAlive) {
+    static List<SearchShardIterator> getLocalLocalShardsIteratorFromPointInTime(
+        ClusterState clusterState,
+        OriginalIndices originalIndices,
+        String localClusterAlias,
+        SearchContextId searchContext,
+        TimeValue keepAlive,
+        boolean allowPartialSearchResults
+    ) {
         final List<SearchShardIterator> iterators = new ArrayList<>(searchContext.shards().size());
         for (Map.Entry<ShardId, SearchContextIdForNode> entry : searchContext.shards().entrySet()) {
             final SearchContextIdForNode perNode = entry.getValue();
             if (Strings.isEmpty(perNode.getClusterAlias())) {
                 final ShardId shardId = entry.getKey();
-                final ShardIterator shards = OperationRouting.getShards(clusterState, shardId);
-                final List<String> targetNodes = new ArrayList<>(shards.size());
-                targetNodes.add(perNode.getNode());
-                if (perNode.getSearchContextId().getSearcherId() != null) {
-                    for (ShardRouting shard : shards) {
-                        if (shard.currentNodeId().equals(perNode.getNode()) == false) {
-                            targetNodes.add(shard.currentNodeId());
+                final List<String> targetNodes = new ArrayList<>(2);
+                // Prefer executing shard requests on nodes that are part of PIT first.
+                if (clusterState.nodes().nodeExists(perNode.getNode())) {
+                    targetNodes.add(perNode.getNode());
+                }
+                try {
+                    final ShardIterator shards = OperationRouting.getShards(clusterState, shardId);
+                    if (perNode.getSearchContextId().getSearcherId() != null) {
+                        for (ShardRouting shard : shards) {
+                            if (shard.currentNodeId().equals(perNode.getNode()) == false) {
+                                targetNodes.add(shard.currentNodeId());
+                            }
                         }
                     }
+                } catch (IndexNotFoundException | ShardNotFoundException e) {
+                    // We can hit these exceptions if the index was deleted after creating PIT or the cluster state on
+                    // this coordinating node is outdated. It's fine to ignore these extra "retry-able" target shards
+                    // when allowPartialSearchResults is false
+                    if (allowPartialSearchResults == false) {
+                        throw e;
+                    }
                 }
-                iterators.add(new SearchShardIterator(localClusterAlias, shardId, targetNodes, originalIndices,
-                    perNode.getSearchContextId(), keepAlive));
+                OriginalIndices finalIndices = new OriginalIndices(
+                    new String[] { shardId.getIndexName() },
+                    originalIndices.indicesOptions()
+                );
+                iterators.add(
+                    new SearchShardIterator(localClusterAlias, shardId, targetNodes, finalIndices, perNode.getSearchContextId(), keepAlive)
+                );
             }
         }
         return iterators;
