@@ -13,7 +13,6 @@ import org.apache.lucene.index.LeafReaderContext;
 import org.apache.lucene.index.NumericDocValues;
 import org.apache.lucene.index.SortedNumericDocValues;
 import org.apache.lucene.index.SortedSetDocValues;
-import org.apache.lucene.queries.SearchAfterSortedDocQuery;
 import org.apache.lucene.search.BooleanClause;
 import org.apache.lucene.search.BooleanQuery;
 import org.apache.lucene.search.CollectionTerminatedException;
@@ -33,9 +32,13 @@ import org.apache.lucene.search.comparators.LongComparator;
 import org.apache.lucene.util.Bits;
 import org.apache.lucene.util.RoaringDocIdSet;
 import org.elasticsearch.ElasticsearchParseException;
+import org.elasticsearch.common.Rounding;
 import org.elasticsearch.core.Releasables;
 import org.elasticsearch.index.IndexSortConfig;
+import org.elasticsearch.lucene.queries.SearchAfterSortedDocQuery;
 import org.elasticsearch.search.DocValueFormat;
+import org.elasticsearch.search.aggregations.AggregationExecutionContext;
+import org.elasticsearch.search.aggregations.AggregationExecutionException;
 import org.elasticsearch.search.aggregations.Aggregator;
 import org.elasticsearch.search.aggregations.AggregatorFactories;
 import org.elasticsearch.search.aggregations.BucketCollector;
@@ -46,6 +49,7 @@ import org.elasticsearch.search.aggregations.LeafBucketCollector;
 import org.elasticsearch.search.aggregations.MultiBucketCollector;
 import org.elasticsearch.search.aggregations.MultiBucketConsumerService;
 import org.elasticsearch.search.aggregations.bucket.BucketsAggregator;
+import org.elasticsearch.search.aggregations.bucket.histogram.SizedBucketAggregator;
 import org.elasticsearch.search.aggregations.support.AggregationContext;
 import org.elasticsearch.search.searchafter.SearchAfterBuilder;
 import org.elasticsearch.search.sort.SortAndFormats;
@@ -57,60 +61,84 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.function.LongUnaryOperator;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.search.aggregations.MultiBucketConsumerService.MAX_BUCKET_SETTING;
 
-final class CompositeAggregator extends BucketsAggregator {
+public final class CompositeAggregator extends BucketsAggregator implements SizedBucketAggregator {
     private final int size;
     private final List<String> sourceNames;
     private final int[] reverseMuls;
+    private final MissingOrder[] missingOrders;
     private final List<DocValueFormat> formats;
     private final CompositeKey rawAfterKey;
 
     private final CompositeValuesSourceConfig[] sourceConfigs;
     private final SingleDimensionValuesSource<?>[] sources;
     private final CompositeValuesCollectorQueue queue;
+    private final DateHistogramValuesSource[] innerSizedBucketAggregators;
 
     private final List<Entry> entries = new ArrayList<>();
-    private LeafReaderContext currentLeaf;
+    private AggregationExecutionContext currentAggCtx;
     private RoaringDocIdSet.Builder docIdSetBuilder;
     private BucketCollector deferredCollectors;
 
     private boolean earlyTerminated;
 
-    CompositeAggregator(String name, AggregatorFactories factories, AggregationContext context, Aggregator parent,
-                        Map<String, Object> metadata,
-                        int size, CompositeValuesSourceConfig[] sourceConfigs, CompositeKey rawAfterKey) throws IOException {
-        super(name, factories, context, parent, CardinalityUpperBound.MANY, metadata);
+    CompositeAggregator(
+        String name,
+        AggregatorFactories factories,
+        AggregationContext aggCtx,
+        Aggregator parent,
+        Map<String, Object> metadata,
+        int size,
+        CompositeValuesSourceConfig[] sourceConfigs,
+        CompositeKey rawAfterKey
+    ) throws IOException {
+        super(name, factories, aggCtx, parent, CardinalityUpperBound.MANY, metadata);
         this.size = size;
-        this.sourceNames = Arrays.stream(sourceConfigs).map(CompositeValuesSourceConfig::name).collect(Collectors.toList());
+        this.sourceNames = Arrays.stream(sourceConfigs).map(CompositeValuesSourceConfig::name).toList();
         this.reverseMuls = Arrays.stream(sourceConfigs).mapToInt(CompositeValuesSourceConfig::reverseMul).toArray();
-        this.formats = Arrays.stream(sourceConfigs).map(CompositeValuesSourceConfig::format).collect(Collectors.toList());
-        this.sources = new SingleDimensionValuesSource[sourceConfigs.length];
+        this.missingOrders = Arrays.stream(sourceConfigs).map(CompositeValuesSourceConfig::missingOrder).toArray(MissingOrder[]::new);
+        this.formats = Arrays.stream(sourceConfigs).map(CompositeValuesSourceConfig::format).toList();
+        this.sources = new SingleDimensionValuesSource<?>[sourceConfigs.length];
         // check that the provided size is not greater than the search.max_buckets setting
-        int bucketLimit = context.multiBucketConsumer().getLimit();
+        int bucketLimit = aggCtx.multiBucketConsumer().getLimit();
         if (size > bucketLimit) {
-            throw new MultiBucketConsumerService.TooManyBucketsException("Trying to create too many buckets. Must be less than or equal" +
-                " to: [" + bucketLimit + "] but was [" + size + "]. This limit can be set by changing the [" + MAX_BUCKET_SETTING.getKey() +
-                "] cluster level setting.", bucketLimit);
+            throw new MultiBucketConsumerService.TooManyBucketsException(
+                "Trying to create too many buckets. Must be less than or equal"
+                    + " to: ["
+                    + bucketLimit
+                    + "] but was ["
+                    + size
+                    + "]. This limit can be set by changing the ["
+                    + MAX_BUCKET_SETTING.getKey()
+                    + "] cluster level setting.",
+                bucketLimit
+            );
         }
         this.sourceConfigs = sourceConfigs;
+        List<DateHistogramValuesSource> dateHistogramValuesSources = new ArrayList<>();
         for (int i = 0; i < sourceConfigs.length; i++) {
             this.sources[i] = sourceConfigs[i].createValuesSource(
-                context.bigArrays(),
-                context.searcher().getIndexReader(),
+                aggCtx.bigArrays(),
+                aggCtx.searcher().getIndexReader(),
                 size,
                 this::addRequestCircuitBreakerBytes
             );
+            if (this.sources[i] instanceof DateHistogramValuesSource) {
+                dateHistogramValuesSources.add((DateHistogramValuesSource) this.sources[i]);
+            }
         }
-        this.queue = new CompositeValuesCollectorQueue(context.bigArrays(), sources, size);
+        this.innerSizedBucketAggregators = dateHistogramValuesSources.toArray(new DateHistogramValuesSource[0]);
+        this.queue = new CompositeValuesCollectorQueue(aggCtx.bigArrays(), sources, size);
         if (rawAfterKey != null) {
             try {
                 this.queue.setAfterKey(rawAfterKey);
             } catch (IllegalArgumentException ex) {
-                throw new ElasticsearchParseException("Cannot set after key in the composite aggregation [" + name + "] - " +
-                    ex.getMessage(), ex);
+                throw new ElasticsearchParseException(
+                    "Cannot set after key in the composite aggregation [" + name + "] - " + ex.getMessage(),
+                    ex
+                );
             }
         }
         this.rawAfterKey = rawAfterKey;
@@ -121,14 +149,16 @@ final class CompositeAggregator extends BucketsAggregator {
         try {
             Releasables.close(queue);
         } finally {
-            Releasables.close(sources);
+            if (sources != null) {
+                Releasables.close(sources);
+            }
         }
     }
 
     @Override
     protected void doPreCollection() throws IOException {
         deferredCollectors = MultiBucketCollector.wrap(false, Arrays.asList(subAggregators));
-        collectableSubAggregators = BucketCollector.NO_OP_COLLECTOR;
+        collectableSubAggregators = BucketCollector.NO_OP_BUCKET_COLLECTOR;
     }
 
     @Override
@@ -140,7 +170,7 @@ final class CompositeAggregator extends BucketsAggregator {
     public InternalAggregation[] buildAggregations(long[] owningBucketOrds) throws IOException {
         // Composite aggregator must be at the top of the aggregation tree
         assert owningBucketOrds.length == 1 && owningBucketOrds[0] == 0L;
-        if (deferredCollectors != NO_OP_COLLECTOR) {
+        if (deferredCollectors != NO_OP_BUCKET_COLLECTOR) {
             // Replay all documents that contain at least one top bucket (collected during the first pass).
             runDeferredCollections();
         }
@@ -157,32 +187,59 @@ final class CompositeAggregator extends BucketsAggregator {
             CompositeKey key = queue.toCompositeKey(slot);
             InternalAggregations aggs = subAggsForBuckets[slot];
             long docCount = queue.getDocCount(slot);
-            buckets[queue.size()] = new InternalComposite.InternalBucket(sourceNames, formats, key, reverseMuls, docCount, aggs);
+            buckets[queue.size()] = new InternalComposite.InternalBucket(
+                sourceNames,
+                formats,
+                key,
+                reverseMuls,
+                missingOrders,
+                docCount,
+                aggs
+            );
         }
-        CompositeKey lastBucket = num > 0 ? buckets[num-1].getRawKey() : null;
+        CompositeKey lastBucket = num > 0 ? buckets[num - 1].getRawKey() : null;
         return new InternalAggregation[] {
-            new InternalComposite(name, size, sourceNames, formats, Arrays.asList(buckets), lastBucket, reverseMuls,
-                    earlyTerminated, metadata())
-        };
+            new InternalComposite(
+                name,
+                size,
+                sourceNames,
+                formats,
+                Arrays.asList(buckets),
+                lastBucket,
+                reverseMuls,
+                missingOrders,
+                earlyTerminated,
+                metadata()
+            ) };
     }
 
     @Override
     public InternalAggregation buildEmptyAggregation() {
-        return new InternalComposite(name, size, sourceNames, formats, Collections.emptyList(), null, reverseMuls,
-            false, metadata());
+        return new InternalComposite(
+            name,
+            size,
+            sourceNames,
+            formats,
+            Collections.emptyList(),
+            null,
+            reverseMuls,
+            missingOrders,
+            false,
+            metadata()
+        );
     }
 
     private void finishLeaf() {
-        if (currentLeaf != null) {
+        if (currentAggCtx != null) {
             DocIdSet docIdSet = docIdSetBuilder.build();
-            entries.add(new Entry(currentLeaf, docIdSet));
-            currentLeaf = null;
+            entries.add(new Entry(currentAggCtx, docIdSet));
+            currentAggCtx = null;
             docIdSetBuilder = null;
         }
     }
 
     /** Return true if the provided field may have multiple values per document in the leaf **/
-    private boolean isMaybeMultivalued(LeafReaderContext context, SortField sortField) throws IOException {
+    private static boolean isMaybeMultivalued(LeafReaderContext context, SortField sortField) throws IOException {
         SortField.Type type = IndexSortConfig.getSortFieldType(sortField);
         switch (type) {
             case STRING:
@@ -218,11 +275,11 @@ final class CompositeAggregator extends BucketsAggregator {
             SingleDimensionValuesSource<?> source = sources[i];
             SortField indexSortField = indexSort.getSort()[i];
             if (source.fieldType == null
-                    // TODO: can we handle missing bucket when using index sort optimization ?
-                    || source.missingBucket
-                    || indexSortField.getField().equals(source.fieldType.name()) == false
-                    || isMaybeMultivalued(context, indexSortField)
-                    || sourceConfig.hasScript()) {
+                // TODO: can we handle missing bucket when using index sort optimization ?
+                || source.missingBucket
+                || indexSortField.getField().equals(source.fieldType.name()) == false
+                || isMaybeMultivalued(context, indexSortField)
+                || sourceConfig.hasScript()) {
                 break;
             }
 
@@ -287,17 +344,19 @@ final class CompositeAggregator extends BucketsAggregator {
                     }
 
                     @Override
-                    public FieldComparator<?> getComparator(int numHits, int sortPos) {
-                        return new LongComparator(1, delegate.getField(), (Long) missingValue, delegate.getReverse(), sortPos) {
+                    public FieldComparator<?> getComparator(int numHits, boolean enableSkipping) {
+                        return new LongComparator(1, delegate.getField(), (Long) missingValue, delegate.getReverse(), false) {
                             @Override
                             public LeafFieldComparator getLeafComparator(LeafReaderContext context) throws IOException {
                                 return new LongLeafComparator(context) {
                                     @Override
                                     protected NumericDocValues getNumericDocValues(LeafReaderContext context, String field)
-                                            throws IOException {
-                                        NumericDocValues dvs =  SortedNumericSelector.wrap(
-                                                DocValues.getSortedNumeric(context.reader(), field),
-                                            delegate.getSelector(), delegate.getNumericType());
+                                        throws IOException {
+                                        NumericDocValues dvs = SortedNumericSelector.wrap(
+                                            DocValues.getSortedNumeric(context.reader(), field),
+                                            delegate.getSelector(),
+                                            delegate.getNumericType()
+                                        );
                                         return new NumericDocValues() {
                                             @Override
                                             public long longValue() throws IOException {
@@ -347,22 +406,26 @@ final class CompositeAggregator extends BucketsAggregator {
         for (int i = 0; i < formats.length; i++) {
             formats[i] = sources[i].format;
         }
-        FieldDoc fieldDoc = SearchAfterBuilder.buildFieldDoc(new SortAndFormats(indexSortPrefix, formats),
-            Arrays.copyOfRange(rawAfterKey.values(), 0, formats.length), null);
+        FieldDoc fieldDoc = SearchAfterBuilder.buildFieldDoc(
+            new SortAndFormats(indexSortPrefix, formats),
+            Arrays.copyOfRange(rawAfterKey.values(), 0, formats.length),
+            null
+        );
         if (indexSortPrefix.getSort().length < sources.length) {
             // include all docs that belong to the partial bucket
             fieldDoc.doc = -1;
         }
-        BooleanQuery newQuery = new BooleanQuery.Builder()
-            .add(topLevelQuery(), BooleanClause.Occur.MUST)
+        BooleanQuery newQuery = new BooleanQuery.Builder().add(topLevelQuery(), BooleanClause.Occur.MUST)
             .add(new SearchAfterSortedDocQuery(applySortFieldRounding(indexSortPrefix), fieldDoc), BooleanClause.Occur.FILTER)
             .build();
         Weight weight = searcher().createWeight(searcher().rewrite(newQuery), ScoreMode.COMPLETE_NO_SCORES, 1f);
         Scorer scorer = weight.scorer(ctx);
         if (scorer != null) {
             DocIdSetIterator docIt = scorer.iterator();
-            final LeafBucketCollector inner = queue.getLeafCollector(ctx,
-                getFirstPassCollector(docIdSetBuilder, indexSortPrefix.getSort().length));
+            final LeafBucketCollector inner = queue.getLeafCollector(
+                ctx,
+                getFirstPassCollector(docIdSetBuilder, indexSortPrefix.getSort().length)
+            );
             inner.setScorer(scorer);
             final Bits liveDocs = ctx.reader().getLiveDocs();
             while (docIt.nextDoc() != DocIdSetIterator.NO_MORE_DOCS) {
@@ -374,23 +437,24 @@ final class CompositeAggregator extends BucketsAggregator {
     }
 
     @Override
-    protected LeafBucketCollector getLeafCollector(LeafReaderContext ctx, LeafBucketCollector sub) throws IOException {
+    protected LeafBucketCollector getLeafCollector(AggregationExecutionContext aggCtx, LeafBucketCollector sub) throws IOException {
         finishLeaf();
 
-        boolean fillDocIdSet = deferredCollectors != NO_OP_COLLECTOR;
+        boolean fillDocIdSet = deferredCollectors != NO_OP_BUCKET_COLLECTOR;
 
-        Sort indexSortPrefix = buildIndexSortPrefix(ctx);
+        Sort indexSortPrefix = buildIndexSortPrefix(aggCtx.getLeafReaderContext());
         int sortPrefixLen = computeSortPrefixLen(indexSortPrefix);
 
-        SortedDocsProducer sortedDocsProducer = (sortPrefixLen == 0 && parent == null) ?
-            sources[0].createSortedDocsProducerOrNull(ctx.reader(), topLevelQuery()) : null;
+        SortedDocsProducer sortedDocsProducer = (sortPrefixLen == 0 && parent == null)
+            ? sources[0].createSortedDocsProducerOrNull(aggCtx.getLeafReaderContext().reader(), topLevelQuery())
+            : null;
         if (sortedDocsProducer != null) {
             // Visit documents sorted by the leading source of the composite definition and terminates
             // when the leading source value is guaranteed to be greater than the lowest composite bucket
             // in the queue.
-            DocIdSet docIdSet = sortedDocsProducer.processLeaf(topLevelQuery(), queue, ctx, fillDocIdSet);
+            DocIdSet docIdSet = sortedDocsProducer.processLeaf(topLevelQuery(), queue, aggCtx.getLeafReaderContext(), fillDocIdSet);
             if (fillDocIdSet) {
-                entries.add(new Entry(ctx, docIdSet));
+                entries.add(new Entry(aggCtx, docIdSet));
             }
             // We can bypass search entirely for this segment, the processing is done in the previous call.
             // Throwing this exception will terminate the execution of the search for this root aggregation,
@@ -399,15 +463,15 @@ final class CompositeAggregator extends BucketsAggregator {
             return LeafBucketCollector.NO_OP_COLLECTOR;
         } else {
             if (fillDocIdSet) {
-                currentLeaf = ctx;
-                docIdSetBuilder = new RoaringDocIdSet.Builder(ctx.reader().maxDoc());
+                currentAggCtx = aggCtx;
+                docIdSetBuilder = new RoaringDocIdSet.Builder(aggCtx.getLeafReaderContext().reader().maxDoc());
             }
             if (rawAfterKey != null && sortPrefixLen > 0) {
                 // We have an after key and index sort is applicable so we jump directly to the doc
                 // that is after the index sort prefix using the rawAfterKey and we start collecting
                 // document from there.
                 try {
-                    processLeafFromQuery(ctx, indexSortPrefix);
+                    processLeafFromQuery(aggCtx.getLeafReaderContext(), indexSortPrefix);
                 } catch (CollectionTerminatedException e) {
                     /*
                      * Signal that there isn't anything to collect. We're going
@@ -418,7 +482,7 @@ final class CompositeAggregator extends BucketsAggregator {
             } else {
                 final LeafBucketCollector inner;
                 try {
-                    inner = queue.getLeafCollector(ctx, getFirstPassCollector(docIdSetBuilder, sortPrefixLen));
+                    inner = queue.getLeafCollector(aggCtx.getLeafReaderContext(), getFirstPassCollector(docIdSetBuilder, sortPrefixLen));
                 } catch (CollectionTerminatedException e) {
                     return LeafBucketCollector.NO_OP_COLLECTOR;
                 }
@@ -474,11 +538,14 @@ final class CompositeAggregator extends BucketsAggregator {
             if (docIdSetIterator == null) {
                 continue;
             }
-            final LeafBucketCollector subCollector = deferredCollectors.getLeafCollector(entry.context);
-            final LeafBucketCollector collector = queue.getLeafCollector(entry.context, getSecondPassCollector(subCollector));
+            final LeafBucketCollector subCollector = deferredCollectors.getLeafCollector(entry.aggCtx);
+            final LeafBucketCollector collector = queue.getLeafCollector(
+                entry.aggCtx.getLeafReaderContext(),
+                getSecondPassCollector(subCollector)
+            );
             DocIdSetIterator scorerIt = null;
             if (needsScores) {
-                Scorer scorer = weight.scorer(entry.context);
+                Scorer scorer = weight.scorer(entry.aggCtx.getLeafReaderContext());
                 if (scorer != null) {
                     scorerIt = scorer.iterator();
                     subCollector.setScorer(scorer);
@@ -516,14 +583,37 @@ final class CompositeAggregator extends BucketsAggregator {
         };
     }
 
+    @Override
+    public double bucketSize(long bucket, Rounding.DateTimeUnit unit) {
+        if (innerSizedBucketAggregators.length != 1) {
+            throw new AggregationExecutionException(
+                "aggregation ["
+                    + name()
+                    + "] does not have exactly one date_histogram value source; exactly one is required when using with rate aggregation"
+            );
+        }
+        return innerSizedBucketAggregators[0].bucketSize(bucket, unit);
+    }
+
+    @Override
+    public double bucketSize(Rounding.DateTimeUnit unit) {
+        if (innerSizedBucketAggregators.length != 1) {
+            throw new AggregationExecutionException(
+                "aggregation ["
+                    + name()
+                    + "] does not have exactly one date_histogram value source; exactly one is required when using with rate aggregation"
+            );
+        }
+        return innerSizedBucketAggregators[0].bucketSize(unit);
+    }
+
     private static class Entry {
-        final LeafReaderContext context;
+        final AggregationExecutionContext aggCtx;
         final DocIdSet docIdSet;
 
-        Entry(LeafReaderContext context, DocIdSet docIdSet) {
-            this.context = context;
+        Entry(AggregationExecutionContext aggCtx, DocIdSet docIdSet) {
+            this.aggCtx = aggCtx;
             this.docIdSet = docIdSet;
         }
     }
 }
-
