@@ -9,6 +9,9 @@ package org.elasticsearch.xpack.security.operator;
 
 import org.elasticsearch.action.admin.cluster.configuration.AddVotingConfigExclusionsAction;
 import org.elasticsearch.action.admin.cluster.configuration.ClearVotingConfigExclusionsAction;
+import org.elasticsearch.action.admin.cluster.desirednodes.DeleteDesiredNodesAction;
+import org.elasticsearch.action.admin.cluster.desirednodes.GetDesiredNodesAction;
+import org.elasticsearch.action.admin.cluster.desirednodes.UpdateDesiredNodesAction;
 import org.elasticsearch.action.admin.cluster.settings.ClusterUpdateSettingsAction;
 import org.elasticsearch.action.admin.cluster.settings.ClusterUpdateSettingsRequest;
 import org.elasticsearch.common.Strings;
@@ -20,12 +23,12 @@ import org.elasticsearch.transport.TransportRequest;
 
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class OperatorOnlyRegistry {
 
-    public static final Set<String> SIMPLE_ACTIONS = Set.of(AddVotingConfigExclusionsAction.NAME,
+    public static final Set<String> SIMPLE_ACTIONS = Set.of(
+        AddVotingConfigExclusionsAction.NAME,
         ClearVotingConfigExclusionsAction.NAME,
         PutLicenseAction.NAME,
         DeleteLicenseAction.NAME,
@@ -35,8 +38,16 @@ public class OperatorOnlyRegistry {
         // Repository analysis actions are not mentioned in core, literal strings are needed.
         "cluster:admin/repository/analyze",
         "cluster:admin/repository/analyze/blob",
-        "cluster:admin/repository/analyze/blob/read"
-        );
+        "cluster:admin/repository/analyze/blob/read",
+        // Node shutdown APIs are operator only
+        "cluster:admin/shutdown/create",
+        "cluster:admin/shutdown/get",
+        "cluster:admin/shutdown/delete",
+        // Desired Nodes API
+        DeleteDesiredNodesAction.NAME,
+        GetDesiredNodesAction.NAME,
+        UpdateDesiredNodesAction.NAME
+    );
 
     private final ClusterSettings clusterSettings;
 
@@ -62,14 +73,17 @@ public class OperatorOnlyRegistry {
 
     private OperatorPrivilegesViolation checkClusterUpdateSettings(ClusterUpdateSettingsRequest request) {
         List<String> operatorOnlySettingKeys = Stream.concat(
-            request.transientSettings().keySet().stream(), request.persistentSettings().keySet().stream()
+            request.transientSettings().keySet().stream(),
+            request.persistentSettings().keySet().stream()
         ).filter(k -> {
             final Setting<?> setting = clusterSettings.get(k);
             return setting != null && setting.isOperatorOnly();
-        }).collect(Collectors.toList());
+        }).toList();
         if (false == operatorOnlySettingKeys.isEmpty()) {
             return () -> (operatorOnlySettingKeys.size() == 1 ? "setting" : "settings")
-                + " [" + Strings.collectionToDelimitedString(operatorOnlySettingKeys, ",") + "]";
+                + " ["
+                + Strings.collectionToDelimitedString(operatorOnlySettingKeys, ",")
+                + "]";
         } else {
             return null;
         }
