@@ -8,7 +8,6 @@ package org.elasticsearch.xpack.watcher;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.apache.logging.log4j.message.ParameterizedMessage;
 import org.elasticsearch.ElasticsearchParseException;
 import org.elasticsearch.cluster.ClusterChangedEvent;
 import org.elasticsearch.cluster.ClusterState;
@@ -21,11 +20,12 @@ import org.elasticsearch.cluster.routing.Murmur3HashFunction;
 import org.elasticsearch.cluster.routing.RoutingNode;
 import org.elasticsearch.cluster.routing.ShardRouting;
 import org.elasticsearch.common.Strings;
+import org.elasticsearch.common.util.Maps;
 import org.elasticsearch.common.util.set.Sets;
-import org.elasticsearch.common.xcontent.XContentType;
 import org.elasticsearch.index.engine.Engine;
 import org.elasticsearch.index.shard.IndexingOperationListener;
 import org.elasticsearch.index.shard.ShardId;
+import org.elasticsearch.xcontent.XContentType;
 import org.elasticsearch.xpack.core.watcher.WatcherState;
 import org.elasticsearch.xpack.core.watcher.watch.Watch;
 import org.elasticsearch.xpack.watcher.trigger.TriggerService;
@@ -41,7 +41,6 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.EnumSet;
-import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -115,19 +114,30 @@ final class WatcherIndexingListener implements IndexingOperationListener, Cluste
 
             ZonedDateTime now = Instant.ofEpochMilli(clock.millis()).atZone(ZoneOffset.UTC);
             try {
-                Watch watch = parser.parseWithSecrets(operation.id(), true, operation.source(), now, XContentType.JSON,
-                    operation.getIfSeqNo(), operation.getIfPrimaryTerm());
+                Watch watch = parser.parseWithSecrets(
+                    operation.id(),
+                    true,
+                    operation.source(),
+                    now,
+                    XContentType.JSON,
+                    operation.getIfSeqNo(),
+                    operation.getIfPrimaryTerm()
+                );
                 ShardAllocationConfiguration shardAllocationConfiguration = configuration.localShards.get(shardId);
                 if (shardAllocationConfiguration == null) {
-                    logger.debug("no distributed watch execution info found for watch [{}] on shard [{}], got configuration for {}",
-                        watch.id(), shardId, configuration.localShards.keySet());
+                    logger.debug(
+                        "no distributed watch execution info found for watch [{}] on shard [{}], got configuration for {}",
+                        watch.id(),
+                        shardId,
+                        configuration.localShards.keySet()
+                    );
                     return;
                 }
 
                 boolean shouldBeTriggered = shardAllocationConfiguration.shouldBeTriggered(watch.id());
                 WatcherState currentState = watcherState.get();
                 if (shouldBeTriggered && EnumSet.of(WatcherState.STOPPING, WatcherState.STOPPED).contains(currentState) == false) {
-                    if (watch.status().state().isActive() ) {
+                    if (watch.status().state().isActive()) {
                         logger.debug("adding watch [{}] to trigger service", watch.id());
                         triggerService.add(watch);
                     } else {
@@ -154,7 +164,7 @@ final class WatcherIndexingListener implements IndexingOperationListener, Cluste
     @Override
     public void postIndex(ShardId shardId, Engine.Index index, Exception ex) {
         if (isWatchDocument(shardId.getIndexName())) {
-            logger.debug(() -> new ParameterizedMessage("failed to add watch [{}] to trigger service", index.id()), ex);
+            logger.debug(() -> "failed to add watch [" + index.id() + "] to trigger service", ex);
         }
     }
 
@@ -196,8 +206,8 @@ final class WatcherIndexingListener implements IndexingOperationListener, Cluste
     public void clusterChanged(ClusterChangedEvent event) {
         // if there is no master node configured in the current state, this node should not try to trigger anything, but consider itself
         // inactive. the same applies, if there is a cluster block that does not allow writes
-        if (Strings.isNullOrEmpty(event.state().nodes().getMasterNodeId()) ||
-                event.state().getBlocks().hasGlobalBlockWithLevel(ClusterBlockLevel.WRITE)) {
+        if (Strings.isNullOrEmpty(event.state().nodes().getMasterNodeId())
+            || event.state().getBlocks().hasGlobalBlockWithLevel(ClusterBlockLevel.WRITE)) {
             configuration = INACTIVE;
             return;
         }
@@ -211,7 +221,7 @@ final class WatcherIndexingListener implements IndexingOperationListener, Cluste
                     checkWatchIndexHasChanged(metadata, event);
                 }
             } catch (IllegalStateException e) {
-                logger.error("error loading watches index: [{}]", e.getMessage());
+                logger.error("error loading watches index", e);
                 configuration = INACTIVE;
             }
         }
@@ -240,8 +250,7 @@ final class WatcherIndexingListener implements IndexingOperationListener, Cluste
      * @param localShardRouting List of local shards of that index
      * @param event             The cluster changed event containing the new cluster state
      */
-    private void reloadConfiguration(String watchIndex, List<ShardRouting> localShardRouting,
-                                     ClusterChangedEvent event) {
+    private void reloadConfiguration(String watchIndex, List<ShardRouting> localShardRouting, ClusterChangedEvent event) {
         // changed alias means to always read a new configuration
         boolean isAliasChanged = watchIndex.equals(configuration.index) == false;
         if (isAliasChanged || hasShardAllocationIdChanged(watchIndex, event.state())) {
@@ -269,10 +278,12 @@ final class WatcherIndexingListener implements IndexingOperationListener, Cluste
 
         // check for different shard ids
         String localNodeId = state.nodes().getLocalNodeId();
-        Set<ShardId> clusterStateLocalShardIds = state.getRoutingNodes().node(localNodeId)
-                .shardsWithState(watchIndex, STARTED, RELOCATING).stream()
-                .map(ShardRouting::shardId)
-                .collect(Collectors.toSet());
+        Set<ShardId> clusterStateLocalShardIds = state.getRoutingNodes()
+            .node(localNodeId)
+            .shardsWithState(watchIndex, STARTED, RELOCATING)
+            .stream()
+            .map(ShardRouting::shardId)
+            .collect(Collectors.toSet());
         Set<ShardId> configuredLocalShardIds = new HashSet<>(configuration.localShards.keySet());
         Set<ShardId> differenceSet = Sets.difference(clusterStateLocalShardIds, configuredLocalShardIds);
         if (differenceSet.isEmpty() == false) {
@@ -280,9 +291,12 @@ final class WatcherIndexingListener implements IndexingOperationListener, Cluste
         }
 
         Map<ShardId, List<String>> shards = allStartedRelocatedShards.stream()
-                .collect(Collectors.groupingBy(ShardRouting::shardId,
-                        Collectors.mapping(sr -> sr.allocationId().getId(),
-                        Collectors.toCollection(ArrayList::new))));
+            .collect(
+                Collectors.groupingBy(
+                    ShardRouting::shardId,
+                    Collectors.mapping(sr -> sr.allocationId().getId(), Collectors.toCollection(ArrayList::new))
+                )
+            );
 
         // sort the collection, so we have a stable order
         shards.values().forEach(Collections::sort);
@@ -316,20 +330,21 @@ final class WatcherIndexingListener implements IndexingOperationListener, Cluste
      *   data.put(ShardId(".watch", 0), new Tuple(1, 4))
      */
     Map<ShardId, ShardAllocationConfiguration> getLocalShardAllocationIds(List<ShardRouting> localShards, IndexRoutingTable routingTable) {
-        Map<ShardId, ShardAllocationConfiguration> data = new HashMap<>(localShards.size());
+        Map<ShardId, ShardAllocationConfiguration> data = Maps.newMapWithExpectedSize(localShards.size());
 
         for (ShardRouting shardRouting : localShards) {
             ShardId shardId = shardRouting.shardId();
 
             // find all allocation ids for this shard id in the cluster state
-            List<String> allocationIds = routingTable.shard(shardId.getId()).getActiveShards()
-                    .stream()
-                    .map(ShardRouting::allocationId)
-                    .map(AllocationId::getId)
-                    .collect(Collectors.toList());
+            List<String> allocationIds = routingTable.shard(shardId.getId())
+                .activeShards()
+                .stream()
+                .map(ShardRouting::allocationId)
+                .map(AllocationId::getId)
+                .sorted()
+                .toList();
 
             // sort the list so it is stable
-            Collections.sort(allocationIds);
 
             String allocationId = shardRouting.allocationId().getId();
             int idx = allocationIds.indexOf(allocationId);
